Bug: 104228 - Links to *.zimbra.com should use HTTPS
Replace http://*.zimbra.com with https://*.zimbra.com in skin and message property files, and a few other miscellaneous locations.

https://bugzilla.zimbra.com/show_bug.cgi?id=104228

Copied from Perforce
 Change: 569757

--- a/WebRoot/messages/ZaMsg_da.properties
+++ b/WebRoot/messages/ZaMsg_da.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Slutbrugervejledningen til Zimbra Connector til Microso
 
 title_ask_community = Sp\u00f8rg dit community
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra fora</a> er et alletiders sted at f\u00e5 \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra fora</a> er et alletiders sted at f\u00e5 \
   svar p\u00e5 dine sp\u00f8rgsm\u00e5l. Du kan s\u00f8ge efter svar i posteringer, og du kan selv postere et sp\u00f8rgsm\u00e5l.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> inkluderer artikler, som supportteamet \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> inkluderer artikler, som supportteamet \
   og dit community har skrevet som respons p\u00e5 fejlfindings- og administrationsproblemer, der ikke blev behandlet i \
   dokumentationen
 
@@ -1761,10 +1761,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Den angivne enhed findes allerede!
 ERROR_MAX_ACCOUNT_QUOTA = Ugyldig v\u00e6rdi for kontokvote! Kontokvote overstiger den maksimale kvote for mail, som dom\u00e6neadministratoren kan angive for en bruger.
 
 ERROR_LICENSE = Der opstod en licensfejl 
-ERROR_NO_VALID_SUBNETS = Fejl! V\u00e6rdien {0} er ikke en gyldig liste over subnet. Se dokumentationen for at f\u00e5 hj\u00e6lp til at konfigurere MTA-betroede netv\u00e6rker. <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Fejl! V\u00e6rdi for MTA-betroede netv\u00e6rker skal indeholde lokale netv\u00e6rksinterfacer: {0}. <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Fejl! {0} er ikke en gyldig subnetv\u00e6rdi i CIDR-notation! <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Fejl! Der er ikke-nul v\u00e6rtsadressebits i {0} \u2013 m\u00e5ske du skulle bruge {1} i stedet for! <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Fejl! V\u00e6rdien {0} er ikke en gyldig liste over subnet. Se dokumentationen for at f\u00e5 hj\u00e6lp til at konfigurere MTA-betroede netv\u00e6rker. <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Fejl! V\u00e6rdi for MTA-betroede netv\u00e6rker skal indeholde lokale netv\u00e6rksinterfacer: {0}. <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Fejl! {0} er ikke en gyldig subnetv\u00e6rdi i CIDR-notation! <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Fejl! Der er ikke-nul v\u00e6rtsadressebits i {0} \u2013 m\u00e5ske du skulle bruge {1} i stedet for! <br/>Yderligere oplysninger om konfiguration af MTA-betroede netv\u00e6rker findes p\u00e5 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Fejl! Den lokale interfaceadresse {0} er udelukket fra MTA-betroede netv\u00e6rker af fortegnelsen {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Fejl! {0} er ikke en gyldig IP-adresse eller netv\u00e6rksmaske.
 ERROR_INVALID_IP_ADDR = Ugyldig IP-adresse
@@ -2126,7 +2126,7 @@ Share_PublishNewTitle = Udgiv ny deling
 
 splashScreenLoading = Indl\u00e6ser ...
 splashScreenAppName = Administrationskonsol
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = Husk mig
 
