--- a/WebRoot/messages/ZaMsg_de.properties
+++ b/WebRoot/messages/ZaMsg_de.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Endnutzerhandbuch zu Zimbra Connector f\u00fcr Microsof
 
 title_ask_community = Fragen an die Community
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Foren</a> sind der perfekte Platz, um \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Foren</a> sind der perfekte Platz, um \
   Antworten auf Ihre Fragen zu erhalten. Sie k\u00f6nnen in den Beitr\u00e4gen nach Antworten suchen oder selbst eine Frage einstellen.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> enth\u00e4lt Artikel, \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> enth\u00e4lt Artikel, \
   die der Support oder die Community in Antwort auf Probleme bei der Fehlerbehebung oder der Verwaltung geschrieben hat und die nicht \
   in der Dokumentation abgehandelt werden.
 
@@ -1770,10 +1770,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Der angegebene Datentr\u00e4ger existiert bereits!
 ERROR_MAX_ACCOUNT_QUOTA = Ung\u00fcltiger Wert f\u00fcr Accountkontingent! Das Accountkontingent \u00fcberschreitet das maximale E-Mail-Kontingent, das der Domain-Administrator f\u00fcr einen Benutzer einstellen kann.
 
 ERROR_LICENSE = Lizenzfehler 
-ERROR_NO_VALID_SUBNETS = Fehler! Der Wert {0} ist keine g\u00fcltige Liste mit Subnetzen. Bitte lesen Sie in der Dokumentation nach, wie Sie MTA Trusted Networks konfigurieren. <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Fehler! Der Wert f\u00fcr MTA Trusted Networks muss lokale Netzwerk-Schnittstellen enthalten: {0}. <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Fehler! {0} ist kein g\u00fcltiger Subnetzwert in CIDR-Notierung! <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Fehler! Host-Adressbits in {0} sind ungleich null, m\u00f6glicherweise m\u00fcssen Sie stattdessen {1} verwenden! <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Fehler! Der Wert {0} ist keine g\u00fcltige Liste mit Subnetzen. Bitte lesen Sie in der Dokumentation nach, wie Sie MTA Trusted Networks konfigurieren. <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Fehler! Der Wert f\u00fcr MTA Trusted Networks muss lokale Netzwerk-Schnittstellen enthalten: {0}. <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Fehler! {0} ist kein g\u00fcltiger Subnetzwert in CIDR-Notierung! <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Fehler! Host-Adressbits in {0} sind ungleich null, m\u00f6glicherweise m\u00fcssen Sie stattdessen {1} verwenden! <br/>Weitere Informationen zur Konfiguration von MTA Trusted Networks finden Sie unter <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Fehler! Lokale Schnittstellenadresse {0} ist durch Eintrag {1} von MTA Trusted Networks ausgeschlossen.  
 ERROR_INVALID_EXCLUDE_ADDR = Fehler! {0} ist keine g\u00fcltige IP-Adresse oder Netzwerkmaske.
 ERROR_INVALID_IP_ADDR = Ung\u00fcltige IP-Adresse
@@ -2160,7 +2160,7 @@ Share_PublishNewTitle = Ver\u00f6ffentlichen
 
 splashScreenLoading = Laden ...
 splashScreenAppName = Verwaltungskonsole
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = Zugang speichern
 
