--- a/WebRoot/messages/ZaMsg_en_GB.properties
+++ b/WebRoot/messages/ZaMsg_en_GB.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = End Users' Guide to Zimbra Connector for Microsoft Outl
 
 title_ask_community = Ask the Community
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forums</a> is a great place to get \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forums</a> is a great place to get \
   answers to your questions. You can search for answers from the postings, and you can post a question.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> includes articles the support \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> includes articles the support \
   team and community have written in response to troubleshooting and administration issues that were not covered in \
   the documentation
 
@@ -1756,10 +1756,10 @@ ERROR_VOLUME_ALREADY_EXISTS = The specified volume already exists!
 ERROR_MAX_ACCOUNT_QUOTA = Invalid value for account quota!  Account quota exceeds the maximum mail quota which the domain admin can set for a user.
 
 ERROR_LICENSE = Licence error encountered 
-ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Error! Value for MTA Trusted Networks must contain local network interfaces: {0}. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Error! {0} is not a valid subnet value in CIDR notation! <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Error! non-null host address bits in {0}, perhaps you should use {1} instead! <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Error! Value {0} is not a valid list of subnets. Please consult with documentation for help on configuring MTA Trusted Networks. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Error! Value for MTA Trusted Networks must contain local network interfaces: {0}. <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Error! {0} is not a valid subnet value in CIDR notation! <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Error! non-null host address bits in {0}, perhaps you should use {1} instead! <br/>Additional information about MTA Trusted Networks configuration can be found at <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Error! Local interface address {0} is excluded from MTA Trusted Networks by entry {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Error! {0} is not a valid IP address or network mask.
 ERROR_INVALID_IP_ADDR = Invalid IP address
@@ -2121,7 +2121,7 @@ Share_PublishNewTitle = Publish New Share
 
 splashScreenLoading = Loading ...
 splashScreenAppName = Administration Console
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = Remember me
 
