--- a/WebRoot/messages/ZaMsg_es.properties
+++ b/WebRoot/messages/ZaMsg_es.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Manual de usuario para el conector de Zimbra para Micro
 
 title_ask_community = Pregunta a la comunidad
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Foros de Zimbra</a> es un excelente lugar para obtener\
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Foros de Zimbra</a> es un excelente lugar para obtener\
   respuestas a tus preguntas Puedes buscar respuestas de publicaciones y tambi\u00e9n puedes publicar preguntas.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> incluye art\u00edculos que el servicio de asistencia \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> incluye art\u00edculos que el servicio de asistencia \
   y la comunidad de usuarios han escrito en respuesta a preguntas de resoluci\u00f3n de problemas y problemas de administraci\u00f3n no incluidas en\
  la documentaci\u00f3n
 
@@ -1778,10 +1778,10 @@ ERROR_VOLUME_ALREADY_EXISTS = El volumen especificado ya existe.
 ERROR_MAX_ACCOUNT_QUOTA = \u00a1Valor no v\u00e1lido para el espacio de almacenamiento de la cuenta! El espacio de almacenamiento de la cuenta supera el espacio m\u00e1ximo de correo que el administrador del dominio puede establecer para un usuario.
 
 ERROR_LICENSE = Se ha detectado un error de licencia 
-ERROR_NO_VALID_SUBNETS = \u00a1Error! El valor {0} no es una lista v\u00e1lida de subredes. Consulta la documentaci\u00f3n para obtener informaci\u00f3n sobre la configuraci\u00f3n de las redes MTA Trusted Networks. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Error! El valor de las redes MTA Trusted Networks debe incluir interfaces locales: {0}. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = \u00a1Error! {0} no es un valor v\u00e1lido de subred en el formato CIDR! <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = \u00a1Error! Hay bits no nulos en la direcci\u00f3n del servidor en {0}; quiz\u00e1 deber\u00edas usar {1}. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = \u00a1Error! El valor {0} no es una lista v\u00e1lida de subredes. Consulta la documentaci\u00f3n para obtener informaci\u00f3n sobre la configuraci\u00f3n de las redes MTA Trusted Networks. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Error! El valor de las redes MTA Trusted Networks debe incluir interfaces locales: {0}. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = \u00a1Error! {0} no es un valor v\u00e1lido de subred en el formato CIDR! <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = \u00a1Error! Hay bits no nulos en la direcci\u00f3n del servidor en {0}; quiz\u00e1 deber\u00edas usar {1}. <br/>Encontrar\u00e1s m\u00e1s informaci\u00f3n sobre la configuraci\u00f3n de redes MTA Trusted Networks en <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = \u00a1Error! La direcci\u00f3n de la interfaz local {0} se excluye de las redes de confianza de los agentes de transporte de mensajes (MTA) por la entrada {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = \u00a1Error! {0} no es una direcci\u00f3n IP o m\u00e1scara de red v\u00e1lida.
 ERROR_INVALID_IP_ADDR = Direcci\u00f3n IP no v\u00e1lida
@@ -2170,7 +2170,7 @@ Share_PublishNewTitle = Publicar nuevo elemento
 
 splashScreenLoading = Cargando ...
 splashScreenAppName = Consola de administraci\u00f3n
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versi\u00f3n
 rememberMe = Recordarme
 
