--- a/WebRoot/messages/ZaMsg_fr.properties
+++ b/WebRoot/messages/ZaMsg_fr.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Guide de l\u2019utilisateur \u2013 Connecteur Zimbra po
 
 title_ask_community = Demander \u00e0 la communaut\u00e9
 
-desc_ask_community_1 = Dans les <a target="_new" href="http://www.zimbra.com/forums">forums Zimbra</a>, \
+desc_ask_community_1 = Dans les <a target="_new" href="https://www.zimbra.com/forums">forums Zimbra</a>, \
   vous pouvez trouver des r\u00e9ponses \u00e0 la plupart de vos questions. Vous pouvez rechercher parmi les r\u00e9ponses existantes ou pos(t)er une question directement.
 
-desc_ask_community_2 = Le <a target="_new" href="http://wiki.zimbra.com">wiki Zimbra</a> rassemble des articles qui ont \u00e9t\u00e9 \
+desc_ask_community_2 = Le <a target="_new" href="https://wiki.zimbra.com">wiki Zimbra</a> rassemble des articles qui ont \u00e9t\u00e9 \
   r\u00e9dig\u00e9s par l\u2019\u00e9quipe Zimbra de support technique et par la communaut\u00e9 en r\u00e9ponse \u00e0 des difficult\u00e9s d\u2019administration et \u00e0 des solutions de d\u00e9pannage qui ne sont pas d\u00e9crites dans \
   la documentation standard.
 
@@ -1778,10 +1778,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Le volume sp\u00e9cifi\u00e9 existe d\u00e9j\u00e0
 ERROR_MAX_ACCOUNT_QUOTA = Valeur de quota de compte incorrecte. Le quota de ce compte de messagerie d\u00e9passe le quota maximum de mails que l'administrateur du domaine peut allouer \u00e0 un utilisateur.
 
 ERROR_LICENSE = Erreur de licence 
-ERROR_NO_VALID_SUBNETS = Erreur \u2013 La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Vous pouvez \u00e9galement consulter la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Erreur ! La valeur "MTA Trusted Networks" doit sp\u00e9cifier les interfaces r\u00e9seau locales suivantes\u00a0: {0}. <br/>Pour plus de d\u00e9tails sur la configuration de cette valeur, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Erreur \u2013 {0} n''est pas un nombre correct de sous-r\u00e9seaux (en notation CIDR). <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Erreur \u2013 L''adresse d''h\u00f4te sp\u00e9cifi\u00e9e dans {0} est incorrecte. Utilisez plut\u00f4t {1}. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Erreur \u2013 La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Vous pouvez \u00e9galement consulter la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Erreur ! La valeur "MTA Trusted Networks" doit sp\u00e9cifier les interfaces r\u00e9seau locales suivantes\u00a0: {0}. <br/>Pour plus de d\u00e9tails sur la configuration de cette valeur, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Erreur \u2013 {0} n''est pas un nombre correct de sous-r\u00e9seaux (en notation CIDR). <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Erreur \u2013 L''adresse d''h\u00f4te sp\u00e9cifi\u00e9e dans {0} est incorrecte. Utilisez plut\u00f4t {1}. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Erreur \u2013 L''adresse d''interface locale {0} est exclue des r\u00e9seaux de confiance MTA (MTA Trusted Networks) par l''entr\u00e9e {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Erreur \u2013 {0} n''est pas une valeur correcte d''adresse IP ou de masque de r\u00e9seau.
 ERROR_INVALID_IP_ADDR = Adresse IP non valide
@@ -2171,7 +2171,7 @@ Share_PublishNewTitle = Publier un nouveau partage
 
 splashScreenLoading = Chargement en cours...
 splashScreenAppName = Console d'administration
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = M\u00e9moriser mes valeurs d'acc\u00e8s
 
