--- a/WebRoot/messages/ZaMsg_fr_CA.properties
+++ b/WebRoot/messages/ZaMsg_fr_CA.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Guide d\u2019utilisation pour le connecteur Zimbra pour
 
 title_ask_community = Demander \u00e0 la communaut\u00e9
 
-desc_ask_community_1 = Les <a target="_new" href="http://www.zimbra.com/forums">Forums Zimbra</a> sont un bon endroit pour obtenir \
+desc_ask_community_1 = Les <a target="_new" href="https://www.zimbra.com/forums">Forums Zimbra</a> sont un bon endroit pour obtenir \
 des r\u00e9ponses \u00e0 vos questions. Vous pouvez faire des recherches dans les forums ou poser vos propres questions.
 
-desc_ask_community_2 = Le <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> contient des articles traitant \
+desc_ask_community_2 = Le <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> contient des articles traitant \
 de probl\u00e8mes d'administration ou d\u2019installation \
 qui ne sont pas couverts par la documentation Zimbra.
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Le volume pr\u00e9cis\u00e9 existe d\u00e9j\u00e0.
 ERROR_MAX_ACCOUNT_QUOTA = Valeur de quota de compte incorrecte! Le quota de ce compte de messagerie est sup\u00e9rieur \u00e0 la valeur maximum que l'administrateur du nom de domaine peut allouer \u00e0 un utilisateur.
 
 ERROR_LICENSE = Erreur de licence 
-ERROR_NO_VALID_SUBNETS = Erreur! La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Erreur! La valeur "MTA Trusted Networks" doit pr\u00e9ciser les interfaces r\u00e9seau locales suivantes : {0}. <br/>Pour plus de d\u00e9tails sur la configuration de cette valeur, consultez la page suivante : <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Erreur! {0} n\u2019est pas un nombre correct de sous-r\u00e9seaux (en notation CIDR). <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Erreur! L\u2019adresse d\u2019h\u00f4te pr\u00e9cis\u00e9e dans {0} est incorrecte. Utilisez plut\u00f4t {1}. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Erreur! La valeur {0} ne correspond pas \u00e0 une liste correcte de sous-r\u00e9seaux. Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, reportez-vous \u00e0 la documentation. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Erreur! La valeur "MTA Trusted Networks" doit pr\u00e9ciser les interfaces r\u00e9seau locales suivantes : {0}. <br/>Pour plus de d\u00e9tails sur la configuration de cette valeur, consultez la page suivante : <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Erreur! {0} n\u2019est pas un nombre correct de sous-r\u00e9seaux (en notation CIDR). <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Erreur! L\u2019adresse d\u2019h\u00f4te pr\u00e9cis\u00e9e dans {0} est incorrecte. Utilisez plut\u00f4t {1}. <br/>Pour plus de d\u00e9tails sur la configuration des r\u00e9seaux de confiance MTA, consultez la page suivante\u00a0: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Erreur! L\u2019adresse d\u2019interface locale {0} est exclue des r\u00e9seaux de confiance MTA (MTA Trusted Networks) par l\u2019entr\u00e9e {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = {0} n\u2019est pas une valeur correcte d\u2019adresse IP ou de masque de r\u00e9seau.
 ERROR_INVALID_IP_ADDR = Adresse IP non valide
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = Publier un nouveau partage
 
 splashScreenLoading = Chargement en cours...
 splashScreenAppName = Console d'administration
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = M\u00e9moriser mes valeurs d'acc\u00e8s
 
