--- a/WebRoot/messages/ZaMsg_hu.properties
+++ b/WebRoot/messages/ZaMsg_hu.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = V\u00e9gfelhaszn\u00e1l\u00f3i \u00fatmutat\u00f3 a Zim
 
 title_ask_community = K\u00e9rdezze meg a k\u00f6z\u00f6ss\u00e9get
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">A Zimbra f\u00f3rum</a> kiv\u00e1l\u00f3 hely \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">A Zimbra f\u00f3rum</a> kiv\u00e1l\u00f3 hely \
 a v\u00e1laszok megtal\u00e1l\u00e1s\u00e1ra. A v\u00e1laszokat megkeresheti a bejegyz\u00e9sek k\u00f6z\u00f6tt, vagy feltehet saj\u00e1t k\u00e9rd\u00e9st is.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">A Zimbra Wiki</a> a tan\u00e1csad\u00f3 szolg\u00e1lat \u00e9s \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">A Zimbra Wiki</a> a tan\u00e1csad\u00f3 szolg\u00e1lat \u00e9s \
 a k\u00f6z\u00f6ss\u00e9g \u00e1ltal \u00edrt cikkeket tartalmazza a dokument\u00e1ci\u00f3ban nem t\u00e1rgyalt probl\u00e9m\u00e1k hibaelh\u00e1r\u00edt\u00e1s\u00e1val \u00e9s fel\u00fcgyelet\u00e9vel \
 kapcsolatban
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = A megadott k\u00f6tet m\u00e1r l\u00e9tezik!
 ERROR_MAX_ACCOUNT_QUOTA = \u00c9rv\u00e9nytelen \u00e9rt\u00e9k a fi\u00f3kkv\u00f3t\u00e1hoz! A fi\u00f3kkv\u00f3ta t\u00fall\u00e9pi a levelez\u00e9si kv\u00f3tatartom\u00e1ny maxim\u00e1lis mennyis\u00e9g\u00e9t, amelyet a rendszergazda \u00e1ll\u00edthat be a felhaszn\u00e1l\u00f3 sz\u00e1m\u00e1ra
 
 ERROR_LICENSE = Licenchiba t\u00f6rt\u00e9nt 
-ERROR_NO_VALID_SUBNETS = Hiba! A(z) {0} \u00e9rt\u00e9k nem \u00e9rv\u00e9nyes alh\u00e1l\u00f3zatlista. Tekintse \u00e1t a dokument\u00e1ci\u00f3t az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1l\u00e1s\u00e1val kapcsolatos tudnival\u00f3k\u00e9rt. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
-ERROR_MISSING_LOCAL = Hiba! Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok \u00e9rt\u00e9k\u00e9nek helyi h\u00e1l\u00f3zati interf\u00e9szeket kell tartalmaznia: {0}. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
-ERROR_NOT_CIDR = Hiba! A(z) {0} \u00e9rt\u00e9k nem \u00e9rv\u00e9nyes CIDR-form\u00e1tum\u00fa alh\u00e1l\u00f3zat\u00e9rt\u00e9k. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
-ERROR_NOT_STARTING_ADDR = Hiba! A(z) {0} nem null \u00e9rt\u00e9k\u0171 hosztc\u00edmbiteket tartalmaz. Lehets\u00e9ges, hogy a(z) {1} \u00e9rt\u00e9ket kellene megadni helyette. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
+ERROR_NO_VALID_SUBNETS = Hiba! A(z) {0} \u00e9rt\u00e9k nem \u00e9rv\u00e9nyes alh\u00e1l\u00f3zatlista. Tekintse \u00e1t a dokument\u00e1ci\u00f3t az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1l\u00e1s\u00e1val kapcsolatos tudnival\u00f3k\u00e9rt. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
+ERROR_MISSING_LOCAL = Hiba! Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok \u00e9rt\u00e9k\u00e9nek helyi h\u00e1l\u00f3zati interf\u00e9szeket kell tartalmaznia: {0}. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
+ERROR_NOT_CIDR = Hiba! A(z) {0} \u00e9rt\u00e9k nem \u00e9rv\u00e9nyes CIDR-form\u00e1tum\u00fa alh\u00e1l\u00f3zat\u00e9rt\u00e9k. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
+ERROR_NOT_STARTING_ADDR = Hiba! A(z) {0} nem null \u00e9rt\u00e9k\u0171 hosztc\u00edmbiteket tartalmaz. Lehets\u00e9ges, hogy a(z) {1} \u00e9rt\u00e9ket kellene megadni helyette. <br/>Az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok konfigur\u00e1ci\u00f3j\u00e1r\u00f3l a <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a> c\u00edmen tal\u00e1l b\u0151vebb inform\u00e1ci\u00f3t.
 ERROR_LOCAL_ADDR_EXCLUDED = Hiba! A(z) {0} helyi interf\u00e9szc\u00edmet a(z) {1} kiz\u00e1rja az MTA megb\u00edzhat\u00f3 h\u00e1l\u00f3zatok k\u00f6z\u00fcl.  
 ERROR_INVALID_EXCLUDE_ADDR = Hiba! A(z) {0} nem \u00e9rv\u00e9nyes IP-c\u00edm vagy h\u00e1l\u00f3zati maszk.
 ERROR_INVALID_IP_ADDR = \u00c9rv\u00e9nytelen IP-c\u00edm
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = \u00daj megoszt\u00e1s k\u00f6zz\u00e9t\u00e9tele
 
 splashScreenLoading = Bet\u00f6lt\u00e9s...
 splashScreenAppName = Fel\u00fcgyeleti konzol
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Verzi\u00f3
 rememberMe = Eml\u00e9kezzen r\u00e1m
 
