--- a/WebRoot/messages/ZaMsg_in.properties
+++ b/WebRoot/messages/ZaMsg_in.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Panduan Pengguna Akhir ke Zimbra Connector untuk Micros
 
 title_ask_community = Bertanya pada Komunitas
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat yang hebat untuk mendapatkan \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat yang hebat untuk mendapatkan \
   jawaban atas pertanyaan Anda. Anda dapat mencari jawaban dari postingan yang ada, dan Anda dapat memposting pertanyaan.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> berisi artikel yang telah ditulis oleh tim \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> berisi artikel yang telah ditulis oleh tim \
  dukungan dan komunitas sebagai respons terhadap permasalahan pemecahan masalah dan administrasi yang tidak tercakup dalam \
  dokumen
 
@@ -1799,10 +1799,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Volume yang ditentukan telah ada!
 ERROR_MAX_ACCOUNT_QUOTA = Nilai tidak valid untuk kuota akun! Kuota akun melebihi jumlah maksimal domain kuota email yang dapat diatur admin terhadap pengguna.
 
 ERROR_LICENSE = Terjadi kesalahan lisensi 
-ERROR_NO_VALID_SUBNETS = Kesalahan! Nilai {0} bukan daftar subnet yang valid. Lihat di dokumen untuk mengetahui bantuan mengonfigurasi Jaringan Tepercaya MTA. <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Kesalahan! Nilai untuk Jaringan Tepercaya MTA harus berisi antarmuka jaringan lokal: {0}. <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Kesalahan! {0} bukan nilai subnet yang valid dalam notasi CIDR! <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Kesalahan! alamat host non-null terpotong {0}, mungkin Anda harus menggunakan {1} ! <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Kesalahan! Nilai {0} bukan daftar subnet yang valid. Lihat di dokumen untuk mengetahui bantuan mengonfigurasi Jaringan Tepercaya MTA. <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Kesalahan! Nilai untuk Jaringan Tepercaya MTA harus berisi antarmuka jaringan lokal: {0}. <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Kesalahan! {0} bukan nilai subnet yang valid dalam notasi CIDR! <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Kesalahan! alamat host non-null terpotong {0}, mungkin Anda harus menggunakan {1} ! <br/>Informasi tambahan tentang konfigurasi Jaringan Tepercaya MTA dapat ditemukan di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Kesalahan! Alamat antarmuka lokal {0} dikeluarkan dari Jaringan Tepercaya MTA berdasarkan entri {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Kesalahan! {0} bukan alamat IP atau topeng jaringan yang valid.
 ERROR_INVALID_IP_ADDR = Alamat IP tidak valid
@@ -2198,7 +2198,7 @@ Share_PublishNewTitle = Publikasikan Item Berbagi Baru
 
 splashScreenLoading = Memuat ...
 splashScreenAppName = Konsol Administrasi
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versi
 rememberMe = Ingat saya
 
