--- a/WebRoot/messages/ZaMsg_it.properties
+++ b/WebRoot/messages/ZaMsg_it.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Guida per l'utente finale di Zimbra Connector per Micro
 
 title_ask_community = Chiedi alla Community
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Forum Zimbra</a> \u00e8 il luogo ideale dove ottenere \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Forum Zimbra</a> \u00e8 il luogo ideale dove ottenere \
   risposte alle tue domande. Puoi cercare le risposte tra quelle caricate e puoi caricare una domanda.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">I wiki di Zimbra</a> comprendono articoli che il team\
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">I wiki di Zimbra</a> comprendono articoli che il team\
   e la comunit\u00e0 di sviluppatori hanno scritto in risposta a problemi generali e di amministrazione non trattati nella \
   documentazione
 
@@ -1761,10 +1761,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Il volume specificato gi\u00e0 esiste.
 ERROR_MAX_ACCOUNT_QUOTA = Valore non valido per lo spazio a disposizione dell'account. Lo spazio a disposizione dell'account supera la quantit\u00e0 massima di posta che l'amministratore di dominio pu\u00f2 impostare per un utente.
 
 ERROR_LICENSE = Riscontrato errore di licenza 
-ERROR_NO_VALID_SUBNETS = Errore. Il valore {0} non \u00e8 un elenco valido di sottoreti. Consulta la documentazione per istruzioni sulla configurazione di reti affidabili MTA. <br/>Ulteriori informazioni in merito sono disponibili sul sito <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Errore. Il valore delle reti affidabili MTA deve contenere le interfacce delle sottoreti locali: {0}. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Errore. {0} non \u00e8 un valore valido per una sottorete con la notazione CIDR. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Errore. Bit di indirizzo host non null in {0}. Forse \u00e8 meglio usare {1}. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Errore. Il valore {0} non \u00e8 un elenco valido di sottoreti. Consulta la documentazione per istruzioni sulla configurazione di reti affidabili MTA. <br/>Ulteriori informazioni in merito sono disponibili sul sito <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Errore. Il valore delle reti affidabili MTA deve contenere le interfacce delle sottoreti locali: {0}. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Errore. {0} non \u00e8 un valore valido per una sottorete con la notazione CIDR. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Errore. Bit di indirizzo host non null in {0}. Forse \u00e8 meglio usare {1}. <br/>Ulteriori informazioni sulla configurazione delle reti affidabili MTA sono disponibili sul sito <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Errore. L''indirizzo di interfaccia locale {0} \u00e8 escluso dalle reti affidabili MTA tramite la voce {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Errore. {0} non \u00e8 un indirizzo IP valido o una maschera di rete valida.
 ERROR_INVALID_IP_ADDR = Indirizzo IP non valido
@@ -2126,7 +2126,7 @@ Share_PublishNewTitle = Pubblica nuova condivisione
 
 splashScreenLoading = Caricamento...
 splashScreenAppName = Console di amministrazione
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versione
 rememberMe = Ricordami
 
