--- a/WebRoot/messages/ZaMsg_nl.properties
+++ b/WebRoot/messages/ZaMsg_nl.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Eindgebruikersgids voor Zimbra Connector voor Microsoft
 
 title_ask_community = Vraag het de gebruikersgemeenschap
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forums</a> is een geweldige plaats om antwoord \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forums</a> is een geweldige plaats om antwoord \
   te krijgen op je vragen. Je kunt naar antwoorden zoeken in de publicaties en zelf een vraag stellen.
 
-desc_ask_community_2 = In <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> vind je artikelen die door het ondersteuningsteam \
+desc_ask_community_2 = In <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> vind je artikelen die door het ondersteuningsteam \
   en de gebruikersgemeenschap zijn geschreven in reactie op problemen die niet in de \
   documentatie zijn behandeld
 
@@ -1761,10 +1761,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Het opgegeven volume bestaat al!
 ERROR_MAX_ACCOUNT_QUOTA = Ongeldige waarde voor accountquotum! Accountquotum overschrijdt het maximumaantal voor een mailquotum dat de domeinbeheerder voor een gebruiker kan instellen.
 
 ERROR_LICENSE = Licentiefout opgetreden 
-ERROR_NO_VALID_SUBNETS = Error! Waarde {0} is niet een geldige lijst van subnetten. Raadpleeg de documentatie voor hulp voor het configureren van MTA Trusted Networks. <br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Fout! Waarde voor MTA Trusted Networks moet lokale netwerkinterfaces bevatten: {0}. <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Fout! {0} is geen geldige subnet-waarde in CIDR-opmaak! <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Fout! Niet-null host-adresbits in {0}; wellicht kun je beter {1} gebruiken! <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vind je op URL: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Error! Waarde {0} is niet een geldige lijst van subnetten. Raadpleeg de documentatie voor hulp voor het configureren van MTA Trusted Networks. <br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Fout! Waarde voor MTA Trusted Networks moet lokale netwerkinterfaces bevatten: {0}. <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Fout! {0} is geen geldige subnet-waarde in CIDR-opmaak! <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vindt je op URL: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Fout! Niet-null host-adresbits in {0}; wellicht kun je beter {1} gebruiken! <br/><br/>Verdere informatie over configuratie van MTA Trusted Networks vind je op URL: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Fout! Lokaal interfaceadres {0} is uitgesloten van MTA Trusted Networks door invoer {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Fout! {0} is geen geldig IP-adres of netwerkmasker.
 ERROR_INVALID_IP_ADDR = Ongeldig IP-adres
@@ -2126,7 +2126,7 @@ Share_PublishNewTitle = Nieuwe share publiceren
 
 splashScreenLoading = Bezig met laden...
 splashScreenAppName = Beheersconsole
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versie
 rememberMe = Onthouden
 
