--- a/WebRoot/messages/ZaMsg_pl.properties
+++ b/WebRoot/messages/ZaMsg_pl.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Podr\u0119cznik u\u017cytkownika ko\u0144cowego program
 
 title_ask_community = Zapytaj cz\u0142onk\u00f3w spo\u0142eczno\u015bci
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Fora programu Zimbra</a> to doskona\u0142e miejsce, aby znale\u017a\u0107 \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Fora programu Zimbra</a> to doskona\u0142e miejsce, aby znale\u017a\u0107 \
   odpowied\u017a na swoje pytania. Mo\u017cna wyszukiwa\u0107 odpowiedzi we wpisach i zadawa\u0107 w\u0142asne pytania.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> zawieraj artyku\u0142y napisane przez \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> zawieraj artyku\u0142y napisane przez \
   zesp\u00f3\u0142 pomocy technicznej i\u00a0spo\u0142eczno\u015b\u0107 w odpowiedzi na problemy administracyjne i\u00a0rozwi\u0105zania problem\u00f3w, kt\u00f3re nie zosta\u0142y uj\u0119te \
   w dokumentacji
 
@@ -1788,10 +1788,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Podany wolumin ju\u017c istnieje!
 ERROR_MAX_ACCOUNT_QUOTA = Nieprawid\u0142owa warto\u015b\u0107 limitu pojemno\u015bci konta! Limit pojemno\u015bci konta przekracza maksymaln\u0105 pojemno\u015b\u0107 poczty, jak\u0105 administrator domeny mo\u017ce okre\u015bli\u0107 dla u\u017cytkownika.
 
 ERROR_LICENSE = Wyst\u0105pi\u0142 b\u0142\u0105d licencji 
-ERROR_NO_VALID_SUBNETS = B\u0142\u0105d! Warto\u015b\u0107 {0} nie jest prawid\u0142ow\u0105 warto\u015bci\u0105 podsieci. Informacje na temat konfigurowania opcji Zaufane sieci MTA znajduj\u0105 si\u0119 w dokumentacji. <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = B\u0142\u0105d! Warto\u015b\u0107 opcji Zaufane sieci MTA musi zawiera\u0107 lokalne interfejsy sieciowe: {0}. <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = B\u0142\u0105d! {0} nie jest prawid\u0142ow\u0105 warto\u015bci\u0105 podsieci w notacji CIDR! <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = B\u0142\u0105d! Niezerowe bity adresu hosta w {0}. By\u0107 mo\u017ce nale\u017cy u\u017cy\u0107 {1}! <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = B\u0142\u0105d! Warto\u015b\u0107 {0} nie jest prawid\u0142ow\u0105 warto\u015bci\u0105 podsieci. Informacje na temat konfigurowania opcji Zaufane sieci MTA znajduj\u0105 si\u0119 w dokumentacji. <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = B\u0142\u0105d! Warto\u015b\u0107 opcji Zaufane sieci MTA musi zawiera\u0107 lokalne interfejsy sieciowe: {0}. <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = B\u0142\u0105d! {0} nie jest prawid\u0142ow\u0105 warto\u015bci\u0105 podsieci w notacji CIDR! <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = B\u0142\u0105d! Niezerowe bity adresu hosta w {0}. By\u0107 mo\u017ce nale\u017cy u\u017cy\u0107 {1}! <br/>Dodatkowe informacje na temat konfigurowania opcji Zaufane sieci MTA mo\u017cna znale\u017a\u0107 pod adresem <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = B\u0142\u0105d! Lokalny adres interfejsu {0} zosta\u0142 wykluczony z obszaru Zaufane sieci MTA przez wpis {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = B\u0142\u0105d! {0} nie jest prawid\u0142owym adresem IP ani mask\u0105 sieci.
 ERROR_INVALID_IP_ADDR = Niepoprawny adres IP
@@ -2185,7 +2185,7 @@ Share_PublishNewTitle = Opublikuj nowy udzia\u0142
 
 splashScreenLoading = \u0141adowanie...
 splashScreenAppName = Konsola administracji
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Wersja
 rememberMe = Zapami\u0119taj mnie
 
