--- a/WebRoot/messages/ZaMsg_pt.properties
+++ b/WebRoot/messages/ZaMsg_pt.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Guia dos utilizadores finais para o Conector do Zimbra 
 
 title_ask_community = Perguntar \u00e0 comunidade
 
-desc_ask_community_1 = Os <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs do Zimbra</a> s\u00e3o um excelente local para obter \
+desc_ask_community_1 = Os <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs do Zimbra</a> s\u00e3o um excelente local para obter \
   respostas para as suas perguntas. Pode procurar respostas nas publica\u00e7\u00f5es ou publicar uma pergunta.
 
-desc_ask_community_2 = A <a target="_new" href="http://wiki.zimbra.com">Wiki do Zimbra</a> inclui artigos que a equipa \
+desc_ask_community_2 = A <a target="_new" href="https://wiki.zimbra.com">Wiki do Zimbra</a> inclui artigos que a equipa \
   de assist\u00eancia e a comunidade escreveram em resposta a quest\u00f5es de administra\u00e7\u00e3o e resolu\u00e7\u00e3o de problemas que n\u00e3o eram abordadas na \
   documenta\u00e7\u00e3o
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = O volume especificado j\u00e1 existe.
 ERROR_MAX_ACCOUNT_QUOTA = Valor inv\u00e1lido para a quota da conta! A quota da conta ultrapassou o valor m\u00e1ximo da quota de correio que o administrador do dom\u00ednio pode definir para um utilizador.
 
 ERROR_LICENSE = Foi encontrado um erro de licen\u00e7a
-ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Erro! O endere\u00e7o da interface local {0} est\u00e1 exclu\u00eddo das Redes confi\u00e1veis de MTA pela entrada {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Erro! {0} n\u00e3o \u00e9 um endere\u00e7o IP ou m\u00e1scara de rede v\u00e1lida.
 ERROR_INVALID_IP_ADDR = Endere\u00e7o IP inv\u00e1lido
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = Publicar partilha
 
 splashScreenLoading = A carregar...
 splashScreenAppName = Console administrativo
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Vers\u00e3o
 rememberMe = Lembrar meus dados
 
