--- a/WebRoot/messages/ZaMsg_pt_BR.properties
+++ b/WebRoot/messages/ZaMsg_pt_BR.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Guia do usu\u00e1rio final para Zimbra Connector para M
 
 title_ask_community = Pergunte \u00e0 comunidade
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forums</a> \u00e9 um \u00f3timo lugar para obter \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forums</a> \u00e9 um \u00f3timo lugar para obter \
   respostas \u00e0s suas d\u00favidas. \u00c9 poss\u00edvel buscar respostas em postagens e voc\u00ea pode postar uma pergunta.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> inclui artigos que a equipe de suporte \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> inclui artigos que a equipe de suporte \
   e a comunidade escreveram em resposta a resolu\u00e7\u00e3o de problemas e problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na \
   documenta\u00e7\u00e3o
 
@@ -1760,10 +1760,10 @@ ERROR_VOLUME_ALREADY_EXISTS = O volume especificado j\u00e1 existe.
 ERROR_MAX_ACCOUNT_QUOTA = Valor inv\u00e1lido para a cota da conta! A cota da conta ultrapassou o valor m\u00e1ximo da cota de e-mails que o administrador do dom\u00ednio pode configurar para um usu\u00e1rio.
 
 ERROR_LICENSE = Foi encontrado um erro de licen\u00e7a 
-ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Erro! O endere\u00e7o da interface local {0} est\u00e1 exclu\u00eddo das Redes confi\u00e1veis de MTA pela entrada {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Erro! {0} n\u00e3o \u00e9 um endere\u00e7o IP ou m\u00e1scara de rede v\u00e1lida.
 ERROR_INVALID_IP_ADDR = Endere\u00e7o IP inv\u00e1lido
@@ -2125,7 +2125,7 @@ Share_PublishNewTitle = Publicar compartilhamento
 
 splashScreenLoading = Carregando...
 splashScreenAppName = Console administrativo
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Vers\u00e3o
 rememberMe = Lembrar meus dados
 
