--- a/WebRoot/messages/ZaMsg_pt_PT.properties
+++ b/WebRoot/messages/ZaMsg_pt_PT.properties
@@ -1679,10 +1679,10 @@ ERROR_NO_SUCH_VOLUME = O volume especificado n\u00e3o existe.
 ERROR_VOLUME_ALREADY_EXISTS = O volume especificado j\u00e1 existe.
 
 ERROR_LICENSE = Foi encontrado um erro de licen\u00e7a
-ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Erro! O valor {0} n\u00e3o \u00e9 uma lista v\u00e1lida de subredes. Consulte a documenta\u00e7\u00e3o para saber como configurar Redes confi\u00e1veis do MTA. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Erro! O valor para as redes confi\u00e1veis do MTA precisa conter interfaces de rede locais: {0}. <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NOT_CIDR = Erro! {0} n\u00e3o \u00e9 um valor v\u00e1lido de subrede na nota\u00e7\u00e3o CIDR! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Erro! Bits de endere\u00e7o do host n\u00e3o nulos em {0}, talvez fosse melhor usar {1}! <br/>Informa\u00e7\u00f5es adicionais sobre a configura\u00e7\u00e3o de Redes confi\u00e1veis do MTA podem ser encontradas em <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Erro! O endere\u00e7o da interface local {0} est\u00e1 exclu\u00eddo das Redes confi\u00e1veis de MTA pela entrada {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Erro! {0} n\u00e3o \u00e9 um endere\u00e7o IP ou m\u00e1scara de rede v\u00e1lida.
 ERROR_INVALID_IP_ADDR = Endere\u00e7o IP inv\u00e1lido
@@ -2076,7 +2076,7 @@ Share_PublishNewTitle = Publicar partilha
 
 splashScreenLoading = A carregar...
 splashScreenAppName = Console administrativo
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Vers\u00e3o
 rememberMe = Lembrar meus dados
 
