--- a/WebRoot/messages/ZaMsg_ro.properties
+++ b/WebRoot/messages/ZaMsg_ro.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Ghidul utilizatorului final Zimbra Connector pentru Mic
 
 title_ask_community = \u00centreba\u0163i comunitatea
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Forumuri Zimbra</a> este un loc excelent pentru \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Forumuri Zimbra</a> este un loc excelent pentru \
   a ob\u0163ine r\u0103spunsuri la \u00eentreb\u0103rile dvs. Ave\u0163i posibilitatea s\u0103 c\u0103uta\u0163i r\u0103spunsurile \u00een post\u0103rile existente sau pute\u0163i s\u0103 posta\u0163i o \u00eentrebare.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> con\u0163ine articole scrise de \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> con\u0163ine articole scrise de \
   echip\u0103 \u015fi de comunitate ca r\u0103spuns la problemele de administrare \u015fi depanare care nu au fost tratate \u00een \
   documenta\u0163ie
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Volumul indicat exist\u0103 deja!
 ERROR_MAX_ACCOUNT_QUOTA = Valoare nevalabil\u0103 pentru cota contului! Cota contului dep\u0103\u0219e\u0219te valoarea maxim\u0103 de cot\u0103 de e-mail pe care un administrator de domeniu o poate seta pentru un utilizator.
 
 ERROR_LICENSE = A ap\u0103rut o eroare de licen\u0163\u0103 
-ERROR_NO_VALID_SUBNETS = Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>. Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Eroare! Valoarea pentru re\u0163elele Trusted MTA s\u0103 con\u0163in\u0103 interfe\u0163e locale de re\u0163ea: {0}. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Eroare! {0} nu este o valoare valabil\u0103 de subre\u0163ea \u00een nota\u0163ia CIDR! <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Eroare! Bi\u0163i diferi\u0163i de zero ai adresei gazdei \u00een {0}; poate ar trebuie s\u0103 folosi\u0163i {1}! <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor MTA Trusted la <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>. Eroare! Valoarea {0} nu este o list\u0103 valabil\u0103 de subre\u0163ele. Citi\u0163i documenta\u0163ia pentru configurarea re\u0163elelor Trusted MTA. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Eroare! Valoarea pentru re\u0163elele Trusted MTA s\u0103 con\u0163in\u0103 interfe\u0163e locale de re\u0163ea: {0}. <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Eroare! {0} nu este o valoare valabil\u0103 de subre\u0163ea \u00een nota\u0163ia CIDR! <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor Trusted MTA la <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Eroare! Bi\u0163i diferi\u0163i de zero ai adresei gazdei \u00een {0}; poate ar trebuie s\u0103 folosi\u0163i {1}! <br/>Pute\u0163i g\u0103si mai multe informa\u0163ii despre configurarea re\u0163elelor MTA Trusted la <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Eroare! Adresa interfe\u0163ei locale {0} este exclus\u0103 din re\u0163elele de \u00eencredere pentru MTA de intrarea {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Eroare! {0} nu este o adres\u0103 IP sau masc\u0103 de re\u0163ea valabil\u0103.
 ERROR_INVALID_IP_ADDR = Adres\u0103 IP nevalabil\u0103
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = Publicare partajare nou\u0103
 
 splashScreenLoading = Se \u00eencarc\u0103...
 splashScreenAppName = Consol\u0103 de administrare
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versiune
 rememberMe = \u0162ine-m\u0103 minte
 
