--- a/WebRoot/messages/ZaMsg_sl.properties
+++ b/WebRoot/messages/ZaMsg_sl.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Vodnik za kon\u010dne uporabnike za Zimbra Connector za
 
 title_ask_community = Vpra\u0161ajte skupnost
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra forumi</a> so odli\u010den kraj za dobivanje \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra forumi</a> so odli\u010den kraj za dobivanje \
   odgovorov na va\u0161a vpra\u0161anja. Lahko poi\u0161\u010dete odgovore med objavami, pa tudi objavite vpra\u0161anje.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> vklju\u010duje \u010dlanke, ki so jih napisali \u010dlani ekipe \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> vklju\u010duje \u010dlanke, ki so jih napisali \u010dlani ekipe \
   za podporo in skupnosti v odgovor na re\u0161evanje te\u017eav in skrbni\u0161ke zadeve, ki niso bile zajete v \
   dokumentaciji.
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Navedeni nosilec \u017ee obstaja!
 ERROR_MAX_ACCOUNT_QUOTA = Neveljavna vrednost za dele\u017e ra\u010duna! Dele\u017e ra\u010duna presega maksimalno vrednost za po\u0161to, ki jo skrbnik domene lahko nastavi na uporabniku.
 
 ERROR_LICENSE = Pri\u0161lo je do napake licence 
-ERROR_NO_VALID_SUBNETS = Napaka! Vrednost {0} ni veljaven seznam podomre\u017eij. Za pomo\u010d pri konfiguriranju MTA zaupanja vrednih omre\u017eij si poglejte dokumentacijo. <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Napaka! Vrednost za MTA zaupanja vredna omre\u017eja mora vsebovati vmesnike lokalnih omre\u017eij: {0}. <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Napaka! {0} ni veljavna vrednost podomre\u017eij v CDIR zapisu! <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Napaka! V {0}so neni\u010delni biti naslova gostitelja, morda bi morali namesto tega uporabiti {1}! <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Napaka! Vrednost {0} ni veljaven seznam podomre\u017eij. Za pomo\u010d pri konfiguriranju MTA zaupanja vrednih omre\u017eij si poglejte dokumentacijo. <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Napaka! Vrednost za MTA zaupanja vredna omre\u017eja mora vsebovati vmesnike lokalnih omre\u017eij: {0}. <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Napaka! {0} ni veljavna vrednost podomre\u017eij v CDIR zapisu! <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Napaka! V {0}so neni\u010delni biti naslova gostitelja, morda bi morali namesto tega uporabiti {1}! <br/>Dodatne informacije o konfiguriranju MTA zaupanja vrednih omre\u017eij lahko najdete na <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Napaka! Naslov lokalnega vmesnika {0} je izklju\u010den iz MTA zaupanja vrednih omre\u017eij z vnosom {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Napaka! {0} ni veljaven naslov IP ali omre\u017ena maska.
 ERROR_INVALID_IP_ADDR = Neveljaven IP naslov
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = Objavi novo skupno rabo
 
 splashScreenLoading = Nalaganje ...
 splashScreenAppName = Skrbni\u0161ka konzola
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Razli\u010dica
 rememberMe = Zapomni si me
 
