--- a/WebRoot/messages/ZaMsg_sv.properties
+++ b/WebRoot/messages/ZaMsg_sv.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Anv\u00e4ndarhandbok f\u00f6r Zimbra Connector f\u00f6r
 
 title_ask_community = Fr\u00e5ga gemenskapen
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra forum</a> \u00e4r en utm\u00e4rkt plats att f\u00e5 \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra forum</a> \u00e4r en utm\u00e4rkt plats att f\u00e5 \
   svar p\u00e5 dina fr\u00e5gor. Du kan s\u00f6ka efter svar fr\u00e5n posterna och skicka in en fr\u00e5ga.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> inneh\u00e5ller artiklar som supportteamet \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> inneh\u00e5ller artiklar som supportteamet \
   och gemenskapen har skrivit som svar p\u00e5 fels\u00f6knings- och administrationsproblem som inte ing\u00e5r i \
   dokumentationen.
 
@@ -1761,10 +1761,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Den angivna volymen finns redan!
 ERROR_MAX_ACCOUNT_QUOTA = Ogiltigt v\u00e4rde f\u00f6r kontokvot! Kontokvoten \u00f6verstiger den maximala e-postkvoten som dom\u00e4nadministrat\u00f6ren kan st\u00e4lla in f\u00f6r en anv\u00e4ndare.
 
 ERROR_LICENSE = Ett licensfel intr\u00e4ffade 
-ERROR_NO_VALID_SUBNETS = Fel. V\u00e4rdet {0} \u00e4r ingen giltig lista \u00f6ver undern\u00e4t. L\u00e4s dokumentationen f\u00f6r att f\u00e5 hj\u00e4lp med att konfigurera betrodda n\u00e4tverk f\u00f6r MTA. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Fel. V\u00e4rdet f\u00f6r betrodda n\u00e4tverk f\u00f6r MTA m\u00e5ste inneh\u00e5lla lokala n\u00e4tverksgr\u00e4nssnitt: {0}. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Fel. {0} \u00e4r inget giltigt v\u00e4rde f\u00f6r undern\u00e4t i CIDR-notation. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Fel. Bitar som inte \u00e4r noll i v\u00e4rdadress i {0}, fundera p\u00e5 att anv\u00e4nda {1} i st\u00e4llet. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Fel. V\u00e4rdet {0} \u00e4r ingen giltig lista \u00f6ver undern\u00e4t. L\u00e4s dokumentationen f\u00f6r att f\u00e5 hj\u00e4lp med att konfigurera betrodda n\u00e4tverk f\u00f6r MTA. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Fel. V\u00e4rdet f\u00f6r betrodda n\u00e4tverk f\u00f6r MTA m\u00e5ste inneh\u00e5lla lokala n\u00e4tverksgr\u00e4nssnitt: {0}. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Fel. {0} \u00e4r inget giltigt v\u00e4rde f\u00f6r undern\u00e4t i CIDR-notation. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Fel. Bitar som inte \u00e4r noll i v\u00e4rdadress i {0}, fundera p\u00e5 att anv\u00e4nda {1} i st\u00e4llet. <br/>Ytterligare information om konfiguration av betrodda n\u00e4tverk f\u00f6r MTA finns h\u00e4r: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Fel. Lokal gr\u00e4nssnittsadress {0} har uteslutits fr\u00e5n tillf\u00f6rlitliga n\u00e4tverk f\u00f6r MTA i posten {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Fel. {0} \u00e4r ingen giltig IP-adress eller n\u00e4tverksmask.
 ERROR_INVALID_IP_ADDR = Ogiltig IP-adress
@@ -2126,7 +2126,7 @@ Share_PublishNewTitle = Publicera ny delning
 
 splashScreenLoading = Laddar...
 splashScreenAppName = Administrationskonsol
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Version
 rememberMe = Kom ih\u00e5g mig
 
