--- a/WebRoot/messages/ZaMsg_tr.properties
+++ b/WebRoot/messages/ZaMsg_tr.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Microsoft Outlook i\u00e7in Zimbra Ba\u011flay\u0131c\u
 
 title_ask_community = Toplulu\u011fa Sor
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forumlar\u0131</a> sorular\u0131n\u0131za yan\u0131t alabilece\u011finiz \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forumlar\u0131</a> sorular\u0131n\u0131za yan\u0131t alabilece\u011finiz \
   en iyi yerdir. G\u00f6nderilerden yan\u0131tlar i\u00e7in arama yapabilir ve soru g\u00f6nderebilirsiniz.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> belgelerin i\u00e7ermedi\u011fi sorunlara \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> belgelerin i\u00e7ermedi\u011fi sorunlara \
   y\u00f6nelik destek ekibinin ve toplulu\u011fun sorun giderme ve y\u00f6netimi i\u00e7in yan\u0131t olarak yazd\u0131\u011f\u0131 makaleleri \
   i\u00e7ermektedir.
 
@@ -1793,10 +1793,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Belirtilen birim zaten var!
 ERROR_MAX_ACCOUNT_QUOTA = Hesap kotas\u0131 i\u00e7in ge\u00e7ersiz de\u011fer! Hesap kotas\u0131, etki alan\u0131 y\u00f6neticisinin kullan\u0131c\u0131 ba\u015f\u0131na ayarlayabilece\u011fi posta kotas\u0131 \u00fcst s\u0131n\u0131r\u0131n\u0131 a\u015f\u0131yor.
 
 ERROR_LICENSE = Lisans hatas\u0131yla kar\u015f\u0131la\u015f\u0131ld\u0131 
-ERROR_NO_VALID_SUBNETS = Hata! {0} de\u011feri ge\u00e7erli bir alt a\u011flar listesi de\u011fil. MTA G\u00fcvenilen A\u011flar\u0131 yap\u0131land\u0131rmada yard\u0131m almak i\u00e7in l\u00fctfen belgelere ba\u015fvurun. <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Hata! MTA G\u00fcvenilen A\u011flar i\u00e7in de\u011ferin yerel a\u011f aray\u00fczlerini i\u00e7ermesi gerekiyor: {0}. MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Hata! CIDR simgelemesinde {0} ge\u00e7erli alt a\u011f de\u011feri de\u011fildir. <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Hata! {0} i\u00e7inde bo\u015f olmayan anasistem adres bitleri; belki de {1} kullanmal\u0131s\u0131n\u0131z! <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Hata! {0} de\u011feri ge\u00e7erli bir alt a\u011flar listesi de\u011fil. MTA G\u00fcvenilen A\u011flar\u0131 yap\u0131land\u0131rmada yard\u0131m almak i\u00e7in l\u00fctfen belgelere ba\u015fvurun. <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Hata! MTA G\u00fcvenilen A\u011flar i\u00e7in de\u011ferin yerel a\u011f aray\u00fczlerini i\u00e7ermesi gerekiyor: {0}. MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Hata! CIDR simgelemesinde {0} ge\u00e7erli alt a\u011f de\u011feri de\u011fildir. <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Hata! {0} i\u00e7inde bo\u015f olmayan anasistem adres bitleri; belki de {1} kullanmal\u0131s\u0131n\u0131z! <br/>MTA G\u00fcvenilir A\u011flar\u0131n yap\u0131land\u0131rmas\u0131yla ilgili ek bilgiye \u015fu adresten eri\u015filebilir: <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Hata! Yerel aray\u00fcz adresi {0}, {1} giri\u015fi taraf\u0131ndan MTA G\u00fcvenilir A\u011flar\u0131n d\u0131\u015f\u0131nda b\u0131rak\u0131lm\u0131\u015ft\u0131r.  
 ERROR_INVALID_EXCLUDE_ADDR = Hata! {0} ge\u00e7erli IP adresi veya a\u011f maskesi de\u011fil.
 ERROR_INVALID_IP_ADDR = Ge\u00e7ersiz IP adresi
@@ -2190,7 +2190,7 @@ Share_PublishNewTitle = Yeni Payla\u015f\u0131m Yay\u0131nla
 
 splashScreenLoading = Y\u00fckleniyor ...
 splashScreenAppName = Y\u00f6netici Konsolu
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = S\u00fcr\u00fcm
 rememberMe = Beni an\u0131msa
 
