--- a/WebRoot/messages/ZabMsg_da.properties
+++ b/WebRoot/messages/ZabMsg_da.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra Wiki inkluderer artikler, som supportteamet og\
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Vil du bruge Zimbra med andre klienter? L\u00e6s disse vejledninger.
 zimbraTitle = Zimbra Administrationskonsol
 about_title = Zimbra&trade; Administrationskonsol
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra-version:
 LBL_HomeHelpCenter = Zimbra Hj\u00e6lp-center
 LBL_HomeMsgCount = Meddelelsesantal:
@@ -49,10 +49,10 @@ About_Button_Label = Om Zimbra-version
 zimbraHomePage = Zimbra-startside
 zimbraAbout = Om Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>: den f\u00f8rende inden for \u00e5ben kilde-messaging og samarbejde \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> \u2013 \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> \u2013 \
-    <a target="_new" href="http://www.zimbra.com/forums">Fora</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>: den f\u00f8rende inden for \u00e5ben kilde-messaging og samarbejde \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> \u2013 \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> \u2013 \
+    <a target="_new" href="https://www.zimbra.com/forums">Fora</a>
 ZWC_END_USER_GUIDE = ZWC Slutbrugervejledning til 8.0
 ZWC_END_USER_GUIDE_INFO = Slutbrugervejledningen beskriver de funkioner og applikationer, som benyttes i Zimbra-webklienten.
 MessageContent = meddelelse
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Administratorguiden beskriver Zimbra-systemarkitekturen,
 HELP_usersGuide = Slutbrugervejledning
 HELP_usersGuideDetail = Slutbrugervejledningen beskriver de funktioner og programmer, som benyttes i Zimbra-webklienten.
 HELP_askCommunity = Sp\u00f8rg brugerne
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra-foraene</a> er et godt sted at finde svar p\u00e5 dine sp\u00f8rgsm\u00e5l. Du kan s\u00f8ge efter svar i indl\u00e6ggene eller selv sl\u00e5 et sp\u00f8rgsm\u00e5l op.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> indeholder artikler, som supportteamet og brugerne har skrevet som reaktion p\u00e5 fejlfindings- og administrationsproblemer, der ikke er beskrevet i dokumentationen
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra-foraene</a> er et godt sted at finde svar p\u00e5 dine sp\u00f8rgsm\u00e5l. Du kan s\u00f8ge efter svar i indl\u00e6ggene eller selv sl\u00e5 et sp\u00f8rgsm\u00e5l op.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> indeholder artikler, som supportteamet og brugerne har skrevet som reaktion p\u00e5 fejlfindings- og administrationsproblemer, der ikke er beskrevet i dokumentationen
 HELP_MIG_Q1 = Hvordan kan jeg migrere e-mail-konti fra en Exchange-server til Zimbra?
 HELP_MIG_Q2 = Hvordan kan mine brugere importere indholdet af en .pst-fil fra en postkasse i Microsoft Outlook 2003, 2007 eller 2010 til Zimbra?
 HELP_MIG_Q3 = Hvordan kan jeg migrere e-mail-konti fra en Domino-server til Zimbra?
