--- a/WebRoot/messages/ZabMsg_de.properties
+++ b/WebRoot/messages/ZabMsg_de.properties
@@ -39,7 +39,7 @@ Administration, die in der Dokumentation nicht behandelt werden.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Soll Zimbra mit anderen Clients verwendet werden? Lesen Sie diese Handb\u00fccher.
 zimbraTitle = Zimbra-Verwaltungskonsole
 about_title = Zimbra&trade;-Verwaltungskonsole
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra-Version:
 LBL_HomeHelpCenter = Zimbra-Hilfecenter
 LBL_HomeMsgCount = Anzahl Mails:
@@ -49,10 +49,10 @@ About_Button_Label = Info \u00fcber Zimbra-Version
 zimbraHomePage = Zimbra-Startseite
 zimbraAbout = \u00dcber Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: der f\u00fchrende Anbieter von OpenSource-Kommunikationsdiensten :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Foren</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: der f\u00fchrende Anbieter von OpenSource-Kommunikationsdiensten :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Foren</a>
 ZWC_END_USER_GUIDE = ZWC-Endnutzerhandbuch f\u00fcr 8.0
 ZWC_END_USER_GUIDE_INFO = Im Endnutzerhandbuch werden die Funktionen und Anwendungen des Zimbra-Webclients beschrieben.
 MessageContent = Mail
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Im Administratorhandbuch werden die Zimbra-Systemarchite
 HELP_usersGuide = Endnutzerhandbuch
 HELP_usersGuideDetail = Im Endnutzerhandbuch werden die Funktionen und Anwendungen des Zimbra-Webclients beschrieben.
 HELP_askCommunity = Fragen an die Community
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra-Foren</a> sind ein ausgezeichneter Ort, um Antworten auf Ihre Fragen zu erhalten. Sie k\u00f6nnen nach bereits beantworteten Beitr\u00e4gen suchen und selbst Fragen stellen.
-HELP_askCommunityItem2 = Das <a target="_new" href="http://wiki.zimbra.com">Zimbra-Wiki</a> enth\u00e4lt Artikel vom technischen Support und der Community, die in Bezug auf Fehlerbehebung und Administrationsaspekte geschrieben wurden, welche in der Dokumentation nicht behandelt werden
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra-Foren</a> sind ein ausgezeichneter Ort, um Antworten auf Ihre Fragen zu erhalten. Sie k\u00f6nnen nach bereits beantworteten Beitr\u00e4gen suchen und selbst Fragen stellen.
+HELP_askCommunityItem2 = Das <a target="_new" href="https://wiki.zimbra.com">Zimbra-Wiki</a> enth\u00e4lt Artikel vom technischen Support und der Community, die in Bezug auf Fehlerbehebung und Administrationsaspekte geschrieben wurden, welche in der Dokumentation nicht behandelt werden
 HELP_MIG_Q1 = Wie k\u00f6nnen Server-Mail-Accounts von Exchange nach Zimbra migriert werden?
 HELP_MIG_Q2 = Wie k\u00f6nnen meine Nutzer den Inhalt einer PST-Datei aus einem Postfach unter Microsoft Outlook 2003, 2007 oder 2010 in Zimbra importieren?
 HELP_MIG_Q3 = Wie k\u00f6nnen Server-Mail-Accounts von Domino nach Zimbra migriert werden?
