--- a/WebRoot/messages/ZabMsg_eu.properties
+++ b/WebRoot/messages/ZabMsg_eu.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra Wiki-k hainbat artikulu biltzen du; artikulu horiek lagunt
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Beste bezeroekin Zimbra erabili nahi? Egiaztatu gidak.
 zimbraTitle = Zimbra-ren administrazio-kontsola (TM)
 about_title = Zimbra&trade; administrazio-kontsola
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra bertsioa:
 LBL_HomeHelpCenter = Zimbra laguntza-gunea
 LBL_HomeMsgCount = Mezu zenbaketa:
@@ -49,10 +49,10 @@ About_Button_Label = Zimbra bertsioari buruz
 zimbraHomePage = Zimbra-ren orri nagusia
 zimbraAbout = Zimbra-ri buruz...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: kode irekiko lankidetzako eta mezularitzako aitzindaria: \
-    <a target="_new" href="http://blog.zimbra.com">Bloga</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wikia</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Foroak</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: kode irekiko lankidetzako eta mezularitzako aitzindaria: \
+    <a target="_new" href="https://blog.zimbra.com">Bloga</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wikia</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Foroak</a>
 ZWC_END_USER_GUIDE = ZWC azken erabiltzailearen eskuliburua .
 ZWC_END_USER_GUIDE_INFO = ZWCren azken erabiltzailearen eskuliburua, 6.0rako
 MessageContent = mezua
@@ -77,8 +77,8 @@ HELP_adminGuideDetail = Administrazio gida eskuliburua, Zimbra sistemaren arkite
 HELP_usersGuide = Azken erabiltzailearen eskuliburua
 HELP_usersGuideDetail = Azken erabiltzailearen eskuliburuak Zimbra-ren web bezeroan erabilitako funtzioak eta aplikazioak deskribatzen ditu.
 HELP_askCommunity = Galdetu komunitateari
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra-ko foroak</a>, zure galderei erantzuteko leku paregabeak dira. Bilatu erantzunak argitaratutako mezuetan, edo argitaratu galdera.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> -ak, laguntza-taldeak eta  komunitateak idatzitako artikuluak biltzen ditu, arazoak konpontzeko eta dokumentazioan agertzen ez diren  galderei erantzuteko.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra-ko foroak</a>, zure galderei erantzuteko leku paregabeak dira. Bilatu erantzunak argitaratutako mezuetan, edo argitaratu galdera.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> -ak, laguntza-taldeak eta  komunitateak idatzitako artikuluak biltzen ditu, arazoak konpontzeko eta dokumentazioan agertzen ez diren  galderei erantzuteko.
 HELP_MIG_Q1 = Nola migratzen dira posta elektronikoak Exchange zerbitzaritik Zimbra-ra?
 HELP_MIG_Q2 = Zer egin dezakete nire erabiltzaileek Microsoft Outlook 2003, 2007, 2010 posta buzoiko -pst baten edukia Zimbra-ra inportatu al izateko?
 HELP_MIG_Q3 = Nola migra ditzaket posta elektronikoko kontuak Domino zerbitzaritik Zimbra-ra?
