--- a/WebRoot/messages/ZabMsg_fr.properties
+++ b/WebRoot/messages/ZabMsg_fr.properties
@@ -39,7 +39,7 @@ associ\u00e9s aux probl\u00e8mes de d\u00e9pannage et d'administration\
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Utiliser Zimbra avec les autres clients\u00a0? V\u00e9rifiez ces guides.
 zimbraTitle = Console d'administration Zimbra
 about_title = Zimbra&trade; console d'administration
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Version Zimbra\u00a0:
 LBL_HomeHelpCenter = Centre d'aide Zimbra
 LBL_HomeMsgCount = Nombre de messages\u00a0:
@@ -49,10 +49,10 @@ About_Button_Label = \u00c0 propos de la version Zimbra
 zimbraHomePage = Page d'accueil Zimbra
 zimbraAbout = \u00c0 propos de Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>, le leader des logiciels de messagerie et de collaboration Open Source \
-    <a target="_new" href="http://blog.zimbra.com">Blogue</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>, le leader des logiciels de messagerie et de collaboration Open Source \
+    <a target="_new" href="https://blog.zimbra.com">Blogue</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = Guide d'utilisation de ZWC\u00a08.0
 ZWC_END_USER_GUIDE_INFO = Cette documentation d\u00e9crit les fonctions et applications utilis\u00e9es dans le client Web de Zimbra.
 MessageContent = message
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Le Guide d'administration d\u00e9crit l'architecture du 
 HELP_usersGuide = Guide d'utilisation
 HELP_usersGuideDetail = Le guide d'utilisation d\u00e9crit les fonctions et applications utilis\u00e9es dans le client Web de Zimbra.
 HELP_askCommunity = Demander \u00e0 la communaut\u00e9
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Les forums Zimbra</a> sont l'emplacement id\u00e9al pour trouver des r\u00e9ponses \u00e0 vos questions. Vous pouvez rechercher des r\u00e9ponses dans les forums et poser une question.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Le wiki Zimbra</a> contient des articles \u00e9crits, par l'\u00e9quipe de support et la communaut\u00e9, associ\u00e9s aux probl\u00e8mes de d\u00e9pannage et d'administration qui n'\u00e9taient pas couverts dans la documentation Zimbra
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Les forums Zimbra</a> sont l'emplacement id\u00e9al pour trouver des r\u00e9ponses \u00e0 vos questions. Vous pouvez rechercher des r\u00e9ponses dans les forums et poser une question.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Le wiki Zimbra</a> contient des articles \u00e9crits, par l'\u00e9quipe de support et la communaut\u00e9, associ\u00e9s aux probl\u00e8mes de d\u00e9pannage et d'administration qui n'\u00e9taient pas couverts dans la documentation Zimbra
 HELP_MIG_Q1 = Comment migrer des comptes de messagerie de serveur d'Exchange vers Zimbra\u00a0?
 HELP_MIG_Q2 = Comment mes utilisateurs peuvent-ils importer le contenu d'un fichier .pst de la bo\u00eete aux lettres Microsoft Outlook 2003, 2007, 2010 dans Zimbra\u00a0?
 HELP_MIG_Q3 = Comment migrer des comptes de messagerie de serveur de Domino vers Zimbra\u00a0?
