--- a/WebRoot/messages/ZabMsg_fr_CA.properties
+++ b/WebRoot/messages/ZabMsg_fr_CA.properties
@@ -42,7 +42,7 @@ HELP_PAGE_13 = Le wiki Zimbra contient des articles traitant de probl\u00e8mes \
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Utiliser Zimbra avec les autres clients? Consultez ces guides.
 zimbraTitle = Console d'administration Zimbra
 about_title = Console d'administration Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Version Zimbra\u00a0:
 LBL_HomeHelpCenter = Centre d'aide Zimbra
 LBL_HomeMsgCount = Nombre de messages\u00a0:
@@ -52,10 +52,10 @@ About_Button_Label = \u00c0 propos de la version Zimbra
 zimbraHomePage = Page d'accueil Zimbra
 zimbraAbout = \u00c0 propos de Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>, le sp\u00e9cialiste des logiciels de messagerie et de collaboration Open Source \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>, le sp\u00e9cialiste des logiciels de messagerie et de collaboration Open Source \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = Guide d'utilisation de ZWC\u00a08.0
 ZWC_END_USER_GUIDE_INFO = Cette documentation d\u00e9crit les fonctions et applications utilis\u00e9es dans le client Web de Zimbra.
 MessageContent = message
@@ -80,8 +80,8 @@ HELP_adminGuideDetail = Le Guide d'administration d\u00e9crit l'architecture du 
 HELP_usersGuide = Guide d'utilisation
 HELP_usersGuideDetail = Le guide d'utilisation d\u00e9crit les fonctions et applications utilis\u00e9es dans le client Web de Zimbra.
 HELP_askCommunity = Demander \u00e0 la communaut\u00e9
-HELP_askCommunityItem1 = Les <a target="_new" href="http://www.zimbra.com/forums">Forums Zimbra</a> sont un bon endroit pour obtenir des r\u00e9ponses \u00e0 vos questions. Vous pouvez faire des recherches dans les forums ou poser vos propres questions.
-HELP_askCommunityItem2 = Le <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> contient des articles traitant de probl\u00e8mes d'administration ou d\u2019installation qui ne sont pas couverts par la documentation Zimbra.
+HELP_askCommunityItem1 = Les <a target="_new" href="https://www.zimbra.com/forums">Forums Zimbra</a> sont un bon endroit pour obtenir des r\u00e9ponses \u00e0 vos questions. Vous pouvez faire des recherches dans les forums ou poser vos propres questions.
+HELP_askCommunityItem2 = Le <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> contient des articles traitant de probl\u00e8mes d'administration ou d\u2019installation qui ne sont pas couverts par la documentation Zimbra.
 HELP_MIG_Q1 = Comment migrer des comptes de messagerie de serveur d'Exchange vers Zimbra?
 HELP_MIG_Q2 = Comment mes utilisateurs peuvent-ils importer le contenu d'un fichier .pst  de la bo\u00eete de r\u00e9ception Microsoft Outlook 2003, 2007, 2010 dans Zimbra?
 HELP_MIG_Q3 = Comment migrer des comptes de messagerie Domino vers Zimbra?
