--- a/WebRoot/messages/ZabMsg_hu.properties
+++ b/WebRoot/messages/ZabMsg_hu.properties
@@ -39,7 +39,7 @@ hibaelh\u00e1r\u00edt\u00e1s\u00e1val \u00e9s kezel\u00e9s\u00e9vel kapcsolatban
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = A Zimbra haszn\u00e1lata egy\u00e9b kliensekkel? Tekintse meg az \u00fatmutat\u00f3kat.
 zimbraTitle = Zimbra fel\u00fcgyeleti konzol
 about_title = Zimbra&trade; fel\u00fcgyeleti konzol
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra verzi\u00f3ja:
 LBL_HomeHelpCenter = Zimbra s\u00fag\u00f3k\u00f6zpont
 LBL_HomeMsgCount = \u00dczenetek sz\u00e1ma:
@@ -49,10 +49,10 @@ About_Button_Label = A Zimbra verzi\u00f3ja
 zimbraHomePage = Zimbra kezd\u0151lap
 zimbraAbout = A Zimbra n\u00e9vjegye...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: a ny\u00edlt forr\u00e1s\u00fa \u00fczenetk\u00fcld\u00e9s \u00e9s egy\u00fcttm\u0171k\u00f6d\u00e9s vezet\u0151 rendszere :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">F\u00f3rum</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: a ny\u00edlt forr\u00e1s\u00fa \u00fczenetk\u00fcld\u00e9s \u00e9s egy\u00fcttm\u0171k\u00f6d\u00e9s vezet\u0151 rendszere :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">F\u00f3rum</a>
 ZWC_END_USER_GUIDE = ZWC v\u00e9gfelhaszn\u00e1l\u00f3i \u00fatmutat\u00f3 a 8.0-s verzi\u00f3hoz
 ZWC_END_USER_GUIDE_INFO = A v\u00e9gfelhaszn\u00e1l\u00f3i \u00fatmutat\u00f3 a Zimbra webes \u00fcgyf\u00e9lben haszn\u00e1lt szolg\u00e1ltat\u00e1sokat \u00e9s alkalmaz\u00e1sokat mutatja be.
 MessageContent = \u00fczenet
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = A fel\u00fcgyeleti \u00fatmutat\u00f3 k\u00e9zik\u00f6ny
 HELP_usersGuide = V\u00e9gfelhaszn\u00e1l\u00f3i \u00fatmutat\u00f3
 HELP_usersGuideDetail = A v\u00e9gfelhaszn\u00e1l\u00f3i \u00fatmutat\u00f3 a Zimbra webes \u00fcgyf\u00e9lben haszn\u00e1lt szolg\u00e1ltat\u00e1sokat \u00e9s alkalmaz\u00e1sokat mutatja be.
 HELP_askCommunity = K\u00e9rdezze meg a k\u00f6z\u00f6ss\u00e9get
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">A Zimbra f\u00f3rum</a> kiv\u00e1l\u00f3 hely a v\u00e1laszok megtal\u00e1l\u00e1s\u00e1ra. A v\u00e1laszokat megkeresheti a bejegyz\u00e9sek k\u00f6z\u00f6tt, vagy feltehet saj\u00e1t k\u00e9rd\u00e9st is.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">A Zimbra wiki</a> a tan\u00e1csad\u00f3 szolg\u00e1lat \u00e9s a k\u00f6z\u00f6ss\u00e9g \u00e1ltal \u00edrt cikkeket tartalmazza a dokument\u00e1ci\u00f3ban nem t\u00e1rgyalt probl\u00e9m\u00e1k hibaelh\u00e1r\u00edt\u00e1s\u00e1val \u00e9s fel\u00fcgyelet\u00e9vel kapcsolatban.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">A Zimbra f\u00f3rum</a> kiv\u00e1l\u00f3 hely a v\u00e1laszok megtal\u00e1l\u00e1s\u00e1ra. A v\u00e1laszokat megkeresheti a bejegyz\u00e9sek k\u00f6z\u00f6tt, vagy feltehet saj\u00e1t k\u00e9rd\u00e9st is.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">A Zimbra wiki</a> a tan\u00e1csad\u00f3 szolg\u00e1lat \u00e9s a k\u00f6z\u00f6ss\u00e9g \u00e1ltal \u00edrt cikkeket tartalmazza a dokument\u00e1ci\u00f3ban nem t\u00e1rgyalt probl\u00e9m\u00e1k hibaelh\u00e1r\u00edt\u00e1s\u00e1val \u00e9s fel\u00fcgyelet\u00e9vel kapcsolatban.
 HELP_MIG_Q1 = Hogyan telep\u00edthetem \u00e1t az Exchange rendszerb\u0151l a Zimbra rendszerbe a kiszolg\u00e1l\u00f3alap\u00fa e-mail fi\u00f3kokat?
 HELP_MIG_Q2 = A felhaszn\u00e1l\u00f3im hogyan import\u00e1lhatj\u00e1k a Microsoft Outlook 2003, 2007, 2010 postafi\u00f3kb\u00f3l sz\u00e1rmaz\u00f3 .pst f\u00e1jlok tartalm\u00e1t a Zimbra rendszerbe?
 HELP_MIG_Q3 = Hogyan telep\u00edthetem \u00e1t a Domino rendszerb\u0151l a Zimbra rendszerbe a kiszolg\u00e1l\u00f3alap\u00fa e-mail fi\u00f3kokat?
