--- a/WebRoot/messages/ZabMsg_in.properties
+++ b/WebRoot/messages/ZabMsg_in.properties
@@ -42,7 +42,7 @@ issues that were not covered in the documentation.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Gunakan Zimbra dengan klien lain? Pelajari panduan ini.
 zimbraTitle = Konsol Administrasi Zimbra 
 about_title = Konsol Administrasi Zimbra&trade; 
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versi Zimbra:
 LBL_HomeHelpCenter = Pusat Bantuan Zimbra
 LBL_HomeMsgCount = Jumlah Pesan:
@@ -52,10 +52,10 @@ About_Button_Label = Tentang Versi Zimbra
 zimbraHomePage = Halaman Home Zimbra
 zimbraAbout = Tentang Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: pemimpin dalam perpesanan dan kolaborasi sumber terbuka :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: pemimpin dalam perpesanan dan kolaborasi sumber terbuka :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = Panduan Pengguna Akhir ZWC untuk 8.0
 ZWC_END_USER_GUIDE_INFO = Panduan pengguna akhir menjelaskan fitur dan aplikasi yang digunakan pada Klien Web Zimbra.
 MessageContent = pesan
@@ -80,8 +80,8 @@ HELP_adminGuideDetail = Petunjuk Panduan Administrasi menjelaskan arsitektur sis
 HELP_usersGuide = Panduan Pengguna Akhir
 HELP_usersGuideDetail = Panduan pengguna akhir menjelaskan fitur dan aplikasi yang digunakan pada Klien Web Zimbra.
 HELP_askCommunity = Bertanya pada Komunitas
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Forum Zimbra adalah tempat yang hebat untuk mendapatkan jawaban atas pertanyaan Anda.</a> Anda dapat mencari jawaban dari postingan yang ada, dan Anda dapat memposting pertanyaan.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> berisi artikel yang telah ditulis oleh tim dukungan dan komunitas sebagai respons terhadap permasalahan pemecahan masalah dan administrasi yang tidak tercakup dalam dokumen
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Forum Zimbra adalah tempat yang hebat untuk mendapatkan jawaban atas pertanyaan Anda.</a> Anda dapat mencari jawaban dari postingan yang ada, dan Anda dapat memposting pertanyaan.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> berisi artikel yang telah ditulis oleh tim dukungan dan komunitas sebagai respons terhadap permasalahan pemecahan masalah dan administrasi yang tidak tercakup dalam dokumen
 HELP_MIG_Q1 = Bagaimana saya memindahkan akun email server dari Exchange ke Zimbra?
 HELP_MIG_Q2 = Bagaimana pengguna saya dapat mengimpor konten .pst file dari kotak email Microsoft Outlook 2003, 2007, 2010 ke Zimbra?
 HELP_MIG_Q3 = Bagaimana saya memindahkan akun email server dari Domino ke Zimbra?
