--- a/WebRoot/messages/ZabMsg_it.properties
+++ b/WebRoot/messages/ZabMsg_it.properties
@@ -36,7 +36,7 @@ HELP_PAGE_13 = I wiki di Zimbra comprendono articoli che il team di assistenza e
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Vuoi usare Zimbra con altri client? Consulta questi manuali
 zimbraTitle = Console di amministrazione di Zimbra
 about_title = Console di amministrazione di Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versione Zimbra:
 LBL_HomeHelpCenter = Help Center Zimbra
 LBL_HomeMsgCount = Conteggio messaggi:
@@ -46,10 +46,10 @@ About_Button_Label = Info sulla versione Zimbra
 zimbraHomePage = Pagina principale di Zimbra
 zimbraAbout = Info su Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: il leader per le soluzioni di messaggistica e collaborazione open source \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forum</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: il leader per le soluzioni di messaggistica e collaborazione open source \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forum</a>
 ZWC_END_USER_GUIDE = Guida per l'utente finale di ZWC versione 8.0
 ZWC_END_USER_GUIDE_INFO = La Guida per l'utente finale descrive le funzioni e le applicazioni usate in Zimbra Web Client.
 MessageContent = messaggio
@@ -65,8 +65,8 @@ HELP_adminGuideDetail = Il Manuale di amministrazione descrive l'architettura di
 HELP_usersGuide = Manuale dell'utente finale
 HELP_usersGuideDetail = Il Manuale dell'utente finale descrive le funzionalit\u00e0 e le applicazioni usate in Zimbra Web Client.
 HELP_askCommunity = Chiedi alla community
-HELP_askCommunityItem1 = I <a target="_new" href="http://www.zimbra.com/forums">forum su Zimbra</a> sono un'ottimo modo per ottenere risposte alle proprie domande. \u00c8 possibile cercare risposte nei post nonch\u00e9 porre una domanda.
-HELP_askCommunityItem2 = Le pagine <a target="_new" href="http://wiki.zimbra.com">Wiki su Zimbra</a> includono articoli scritti dal team del supporto e dalla community in risposta alle difficolt\u00e0 di amministrazione e risoluzione dei problemi non coperte nella documentazione
+HELP_askCommunityItem1 = I <a target="_new" href="https://www.zimbra.com/forums">forum su Zimbra</a> sono un'ottimo modo per ottenere risposte alle proprie domande. \u00c8 possibile cercare risposte nei post nonch\u00e9 porre una domanda.
+HELP_askCommunityItem2 = Le pagine <a target="_new" href="https://wiki.zimbra.com">Wiki su Zimbra</a> includono articoli scritti dal team del supporto e dalla community in risposta alle difficolt\u00e0 di amministrazione e risoluzione dei problemi non coperte nella documentazione
 HELP_MIG_Q1 = In che modo posso eseguire la migrazione degli account e-mail del server da Exchange in Zimbra?
 HELP_MIG_Q2 = In che modo gli utenti possono importare i contenuti di un file con estensione pst da una casella postale Microsoft Outlook 2003, 2007, 2010 e in Zimbra?
 HELP_MIG_Q3 = In che modo \u00e8 possibile eseguire la migrazione di account e-mail del server da Domino a Zimbra?
