--- a/WebRoot/messages/ZabMsg_ja.properties
+++ b/WebRoot/messages/ZabMsg_ja.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra wiki\u306b\u306f\u3001\u4ed8\u5c5e\u306e\u6587\u66f8\u306b
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Zimbra\u3068\u4ed6\u306e\u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3092\u4f75\u7528\u3059\u308b\u5834\u5408\u306f\u3001\u3053\u308c\u3089\u306e\u30ac\u30a4\u30c9\u3092\u30c1\u30a7\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 zimbraTitle = Zimbra\u7ba1\u7406\u30b3\u30f3\u30bd\u30fc\u30eb
 about_title = Zimbra&trade\u3001\u7ba1\u7406\u30b3\u30f3\u30bd\u30fc\u30eb
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\uff1a
 LBL_HomeHelpCenter = Zimbra\u30d8\u30eb\u30d7\u30bb\u30f3\u30bf\u30fc
 LBL_HomeMsgCount = \u30e1\u30c3\u30bb\u30fc\u30b8\u6570\uff1a
@@ -49,9 +49,9 @@ About_Button_Label = Zimbra\u306e\u30d0\u30fc\u30b8\u30e7\u30f3\u60c5\u5831
 zimbraHomePage = Zimbra\u30db\u30fc\u30e0\u30da\u30fc\u30b8
 zimbraAbout = Zimbra\u306b\u3064\u3044\u3066...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com/jp/">Zimbra</a>\uff1a\u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u304a\u3088\u3073\u30b3\u30e9\u30dc\u30ec\u30fc\u30b7\u30e7\u30f3\u306e\u30ea\u30fc\u30c0\u30fc\uff1a\
-    <a target="_new" href="http://www.zimbra.com/blog">Zimbra\u30d6\u30ed\u30b0</a> <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a>\
-    <a target="_new" href="http://www.zimbra.com/forums">Zimbra\u30d5\u30a9\u30fc\u30e9\u30e0</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com/jp/">Zimbra</a>\uff1a\u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u304a\u3088\u3073\u30b3\u30e9\u30dc\u30ec\u30fc\u30b7\u30e7\u30f3\u306e\u30ea\u30fc\u30c0\u30fc\uff1a\
+    <a target="_new" href="https://www.zimbra.com/blog">Zimbra\u30d6\u30ed\u30b0</a> <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a>\
+    <a target="_new" href="https://www.zimbra.com/forums">Zimbra\u30d5\u30a9\u30fc\u30e9\u30e0</a>
 ZWC_END_USER_GUIDE = ZWC 8.0\u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u30ac\u30a4\u30c9
 ZWC_END_USER_GUIDE_INFO = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u30ac\u30a4\u30c9\u3067\u306f\u3001Zimbra\u30a6\u30a7\u30d6\u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3067\u4f7f\u7528\u3055\u308c\u3066\u3044\u308b\u6a5f\u80fd\u3084\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306b\u3064\u3044\u3066\u8aac\u660e\u3057\u3066\u3044\u307e\u3059\u3002
 MessageContent = \u30e1\u30c3\u30bb\u30fc\u30b8
@@ -66,8 +66,8 @@ HELP_adminGuideDetail = \u7ba1\u7406\u30ac\u30a4\u30c9\u3067\u306f\u3001Zimbra\u
 HELP_usersGuide = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u30ac\u30a4\u30c9
 HELP_usersGuideDetail = \u30a8\u30f3\u30c9\u30e6\u30fc\u30b6\u30fc\u30ac\u30a4\u30c9\u3067\u306f\u3001Zimbra\u30a6\u30a7\u30d6\u30af\u30e9\u30a4\u30a2\u30f3\u30c8\u3067\u4f7f\u7528\u3055\u308c\u3066\u3044\u308b\u6a5f\u80fd\u3084\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u306b\u3064\u3044\u3066\u8aac\u660e\u3057\u3066\u3044\u307e\u3059\u3002
 HELP_askCommunity = \u30b3\u30df\u30e5\u30cb\u30c6\u30a3\u3067\u8cea\u554f
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra\u30d5\u30a9\u30fc\u30e9\u30e0</a>\u306f\u8cea\u554f\u306e\u56de\u7b54\u3092\u63a2\u3059\u306e\u306b\u6700\u9069\u306a\u5834\u3067\u3059\u3002\u904e\u53bb\u306e\u6295\u7a3f\u3067\u56de\u7b54\u3092\u691c\u7d22\u3057\u305f\u308a\u3001\u65b0\u3057\u3044\u8cea\u554f\u3092\u6295\u7a3f\u3057\u305f\u308a\u3067\u304d\u307e\u3059\u3002
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a>\u306b\u306f\u3001\u4ed8\u5c5e\u306e\u6587\u66f8\u306b\u8a18\u8f09\u3055\u308c\u3066\u3044\u306a\u3044\u30c8\u30e9\u30d6\u30eb\u30b7\u30e5\u30fc\u30c6\u30a3\u30f3\u30b0\u3084\u7ba1\u7406\u4e0a\u306e\u554f\u984c\u306b\u95a2\u3059\u308b\u30b5\u30dd\u30fc\u30c8\u30c1\u30fc\u30e0\u3084\u30b3\u30df\u30e5\u30cb\u30c6\u30a3\u304b\u3089\u306e\u56de\u7b54\u304c\u542b\u307e\u308c\u3066\u3044\u307e\u3059\u3002
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra\u30d5\u30a9\u30fc\u30e9\u30e0</a>\u306f\u8cea\u554f\u306e\u56de\u7b54\u3092\u63a2\u3059\u306e\u306b\u6700\u9069\u306a\u5834\u3067\u3059\u3002\u904e\u53bb\u306e\u6295\u7a3f\u3067\u56de\u7b54\u3092\u691c\u7d22\u3057\u305f\u308a\u3001\u65b0\u3057\u3044\u8cea\u554f\u3092\u6295\u7a3f\u3057\u305f\u308a\u3067\u304d\u307e\u3059\u3002
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a>\u306b\u306f\u3001\u4ed8\u5c5e\u306e\u6587\u66f8\u306b\u8a18\u8f09\u3055\u308c\u3066\u3044\u306a\u3044\u30c8\u30e9\u30d6\u30eb\u30b7\u30e5\u30fc\u30c6\u30a3\u30f3\u30b0\u3084\u7ba1\u7406\u4e0a\u306e\u554f\u984c\u306b\u95a2\u3059\u308b\u30b5\u30dd\u30fc\u30c8\u30c1\u30fc\u30e0\u3084\u30b3\u30df\u30e5\u30cb\u30c6\u30a3\u304b\u3089\u306e\u56de\u7b54\u304c\u542b\u307e\u308c\u3066\u3044\u307e\u3059\u3002
 HELP_MIG_Q1 = Exchange\u304b\u3089Zimbra\u3078\u30b5\u30fc\u30d0\u30fc\u30e1\u30fc\u30eb\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u79fb\u884c\u3059\u308b\u65b9\u6cd5\u306b\u3064\u3044\u3066
 HELP_MIG_Q2 = Microsoft Outlook 2003\u30012007\u30012010\u306e\u30e1\u30fc\u30eb\u30dc\u30c3\u30af\u30b9\u304b\u3089Zimbra\u306b.pst\u30d5\u30a1\u30a4\u30eb\u306e\u5185\u5bb9\u3092\u30a4\u30f3\u30dd\u30fc\u30c8\u3059\u308b\u65b9\u6cd5\u306b\u3064\u3044\u3066
 HELP_MIG_Q3 = Domino \u304b\u3089Zimbra\u3078\u30b5\u30fc\u30d0\u30fc\u30e1\u30fc\u30eb\u30a2\u30ab\u30a6\u30f3\u30c8\u3092\u79fb\u884c\u3059\u308b\u65b9\u6cd5\u306b\u3064\u3044\u3066
