--- a/WebRoot/messages/ZabMsg_nl.properties
+++ b/WebRoot/messages/ZabMsg_nl.properties
@@ -36,7 +36,7 @@ HELP_PAGE_13 = De Zimbra-wiki bevat artikelen die zijn geschreven door het onder
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Wil je Zimbra gebruiken met andere clients? Lees dan deze handleidingen.
 zimbraTitle = Zimbra Administration Console
 about_title = Zimbra&trade; Administration Console
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versie van Zimbra:
 LBL_HomeHelpCenter = Zimbra Helpcentrum
 LBL_HomeMsgCount = Aantal berichten:
@@ -46,10 +46,10 @@ About_Button_Label = Info over deze Zimbra-versie
 zimbraHomePage = Homepagina Zimbra
 zimbraAbout = Info over Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>: het toonaangevend bedrijf in opensource-mailtoepassingen en samenwerking: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forums</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>: het toonaangevend bedrijf in opensource-mailtoepassingen en samenwerking: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forums</a>
 ZWC_END_USER_GUIDE = ZWC Eindgebruikersgids voor 8.0
 ZWC_END_USER_GUIDE_INFO = In de eindgebruikersgids worden de functies en toepassingen beschreven die in Zimbra Web Client worden gebruikt.
 MessageContent = bericht
@@ -65,8 +65,8 @@ HELP_adminGuideDetail = In de Beheerdershandleiding worden de Zimbra-systeemarch
 HELP_usersGuide = Eindgebruikershandleiding
 HELP_usersGuideDetail = In de eindgebruikershandleiding worden de functies en toepassingen beschreven die in de Zimbra-webclient worden gebruikt.
 HELP_askCommunity = Vraag het aan de gemeenschap
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forums</a> is geweldige plaats om je vragen beantwoord te krijgen. Je kunt antwoorden zoeken in de geplaatste berichten en je kunt je eigen vragen stellen.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra-wiki</a> bevat artikelen die door het ondersteuningsteam en de gemeenschap zijn geschreven als antwoord op probleemoplossing en beheerproblemen die niet in de documentatie worden behandeld
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forums</a> is geweldige plaats om je vragen beantwoord te krijgen. Je kunt antwoorden zoeken in de geplaatste berichten en je kunt je eigen vragen stellen.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra-wiki</a> bevat artikelen die door het ondersteuningsteam en de gemeenschap zijn geschreven als antwoord op probleemoplossing en beheerproblemen die niet in de documentatie worden behandeld
 HELP_MIG_Q1 = Hoe moet ik servere-mailaccounts van Exchange naar Zimbra migreren?
 HELP_MIG_Q2 = Hoe moeten mijn gebruikers de inhoud van een .pst-bestand van een mailbox van Microsoft Outlook 2003, 2007, 2010 in Zimbra importeren?
 HELP_MIG_Q3 = Hoe moet ik servere-mailaccounts van Domino naar Zimbra migreren?
