--- a/WebRoot/messages/ZabMsg_pl.properties
+++ b/WebRoot/messages/ZabMsg_pl.properties
@@ -39,7 +39,7 @@ nieopisane w dokumentacji.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Chcesz u\u017cywa\u0107 oprogramowania Zimbra z innymi klientami? Zapoznaj si\u0119 z niniejszymi podr\u0119cznikami.
 zimbraTitle = Konsola administracyjna Zimbra
 about_title = Zimbra&trade; Konsola administracyjna
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Wersja Zimbra:
 LBL_HomeHelpCenter = Centrum pomocy Zimbra
 LBL_HomeMsgCount = Licznik wiadomo\u015bci:
@@ -49,10 +49,10 @@ About_Button_Label = O wersji Zimbra
 zimbraHomePage = Strona g\u0142\u00f3wna Zimbra
 zimbraAbout = O programie Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>: lider w dziedzinie oprogramowania open source do komunikacji i wsp\u00f3\u0142pracy :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Fora</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>: lider w dziedzinie oprogramowania open source do komunikacji i wsp\u00f3\u0142pracy :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Fora</a>
 ZWC_END_USER_GUIDE = Podr\u0119cznik u\u017cytkownika ko\u0144cowego ZWC wersji 8.0
 ZWC_END_USER_GUIDE_INFO = Podr\u0119cznik u\u017cytkownika ko\u0144cowego opisuje funkcje i aplikacje u\u017cywane przez klienta sieciowego Zimbra.
 MessageContent = wiadomo\u015b\u0107
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Podr\u0119cznik Administratora opisuje architektur\u0119
 HELP_usersGuide = Podr\u0119cznik u\u017cytkownika ko\u0144cowego
 HELP_usersGuideDetail = Podr\u0119cznik u\u017cytkownika ko\u0144cowego opisuje funkcje i aplikacje u\u017cywane przez klienta sieciowego Zimbra.
 HELP_askCommunity = Zapytaj cz\u0142onk\u00f3w spo\u0142eczno\u015bci
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Fora Zimbra</a> to doskona\u0142e miejsce, aby uzyska\u0107 odpowied\u017a na swoje pytania. Mo\u017cesz szuka\u0107 odpowiedzi w postach lub zada\u0107 pytanie.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> zawiera artyku\u0142y napisane przez zesp\u00f3\u0142 wsparcia oraz spo\u0142eczno\u015b\u0107 w odpowiedzi na problemy nieopisane w dokumentacji
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Fora Zimbra</a> to doskona\u0142e miejsce, aby uzyska\u0107 odpowied\u017a na swoje pytania. Mo\u017cesz szuka\u0107 odpowiedzi w postach lub zada\u0107 pytanie.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> zawiera artyku\u0142y napisane przez zesp\u00f3\u0142 wsparcia oraz spo\u0142eczno\u015b\u0107 w odpowiedzi na problemy nieopisane w dokumentacji
 HELP_MIG_Q1 = W jaki spos\u00f3b mog\u0119 przeprowadzi\u0107 migracj\u0119 kont poczty e-mail z serwera Exchange do serwera Zimbra?
 HELP_MIG_Q2 = W jaki spos\u00f3b moi u\u017cytkownicy mog\u0105 importowa\u0107 zawarto\u015b\u0107 pliku .pst ze skrzynki pocztowej program\u00f3w Microsoft Outlook 2003, 2007, 2010 do programu Zimbra?
 HELP_MIG_Q3 = W jaki spos\u00f3b mog\u0119 przeprowadzi\u0107 migracj\u0119 kont poczty e-mail z serwera Domino do serwera Zimbra?
