--- a/WebRoot/messages/ZabMsg_pt.properties
+++ b/WebRoot/messages/ZabMsg_pt.properties
@@ -38,7 +38,7 @@ problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na documenta\u
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Usar o Zimbra com outros clientes? Consulte estes guias.
 zimbraTitle = Consola de administra\u00e7\u00e3o Zimbra
 about_title = Zimbra&trade; Consola de administra\u00e7\u00e3o
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Vers\u00e3o Zimbra:
 LBL_HomeHelpCenter = Centro de ajuda Zimbra
 LBL_HomeMsgCount = Contagem de mensagens:
@@ -48,10 +48,10 @@ About_Button_Label = Sobre a vers\u00e3o do Zimbra
 zimbraHomePage = P\u00e1gina inicial Zimbra
 zimbraAbout = Acerca do Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: a l\u00edder em troca de mensagens instant\u00e2neas e colabora\u00e7\u00e3o usando c\u00f3digo aberto :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: a l\u00edder em troca de mensagens instant\u00e2neas e colabora\u00e7\u00e3o usando c\u00f3digo aberto :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs</a>
 ZWC_END_USER_GUIDE = Guia do utilizador final do ZWC para 8.0
 ZWC_END_USER_GUIDE_INFO = O guia do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es usadas no Cliente Web Zimbra.
 MessageContent = mensagem
@@ -67,8 +67,8 @@ HELP_adminGuideDetail = O Guia de administra\u00e7\u00e3o descreve a arquitectur
 HELP_usersGuide = Guia de Utilizadores Finais
 HELP_usersGuideDetail = O guia do utilizador final descreve as funcionalidades e aplica\u00e7\u00f5es usadas no Cliente Web Zimbra.
 HELP_askCommunity = Perguntar \u00e0 comunidade
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs Zimbra</a> \u00e9 um \u00f3ptimo local para obter respostas \u00e0s suas perguntas. Pode pesquisar respostas a partir das publica\u00e7\u00f5es, e pode publicar uma pergunta.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">O Zimbra Wiki</a> inclui artigos que a equipa de suporte e a comunidade escreveram em resposta ao diagn\u00f3stico de erros e a problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na documenta\u00e7\u00e3o.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs Zimbra</a> \u00e9 um \u00f3ptimo local para obter respostas \u00e0s suas perguntas. Pode pesquisar respostas a partir das publica\u00e7\u00f5es, e pode publicar uma pergunta.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">O Zimbra Wiki</a> inclui artigos que a equipa de suporte e a comunidade escreveram em resposta ao diagn\u00f3stico de erros e a problemas de administra\u00e7\u00e3o que n\u00e3o foram abordados na documenta\u00e7\u00e3o.
 HELP_MIG_Q1 = Como posso migrar contas de e-mail de servidor do Exchange para o Zimbra?
 HELP_MIG_Q2 = Como podem os meus utilizadores importar o conte\u00fado de um ficheiro .pst a partir de uma caixa de correio do Microsoft Outlook 2003, 2007, 2010 para o Zimbra?
 HELP_MIG_Q3 = Como posso migrar contas de e-mail de servidor do Domino para o Zimbra?
