--- a/WebRoot/messages/ZabMsg_ro.properties
+++ b/WebRoot/messages/ZabMsg_ro.properties
@@ -39,7 +39,7 @@ neacoperite \u00een documenta\u0163ie.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Utiliza\u0163i Zimbra cu al\u0163i clien\u0163i? Consulta\u0163i aceste ghiduri.
 zimbraTitle = Consola de administrare Zimbra
 about_title = Consola de administrare Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versiune Zimbra:
 LBL_HomeHelpCenter = Centru de ajutor Zimbra
 LBL_HomeMsgCount = Contor de mesaje:
@@ -49,10 +49,10 @@ About_Button_Label = Despre versiunea Zimbra
 zimbraHomePage = Site-ul Zimbra 
 zimbraAbout = Despre Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: liderul \u00een mesagerie \u015fi colaborare open source :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forumuri</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: liderul \u00een mesagerie \u015fi colaborare open source :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forumuri</a>
 ZWC_END_USER_GUIDE = Ghidul de utilizare ZWC versiunea 8,0
 ZWC_END_USER_GUIDE_INFO = Ghidul de utilizare pentru utilizatorul final descrie caracteristicile \u015fi aplica\u0163iile din clientul web Zimbra.
 MessageContent = mesaj
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Ghidul de administrare descrie arhitectura sistemului Zi
 HELP_usersGuide = Ghidul utilizatorului final
 HELP_usersGuideDetail = Ghidul de utilizare pentru utilizatorul final descrie caracteristicile \u015fi aplica\u0163iile din clientul web Zimbra.
 HELP_askCommunity = \u00centreba\u0163i comunitatea
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Forumurile Zimbra</a> sunt locul ideal pentru a ob\u0163ine r\u0103spunsuri la \u00eentreb\u0103rile dvs. Pute\u0163i c\u0103uta \u00een r\u0103spunsurile din post\u0103ri sau pute\u0163i publica o \u00eentrebare.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> include articole scrise de echipa \u015fi comunitatea de asisten\u0163\u0103 ca r\u0103spuns la problemele de depanare \u015fi de administrare neacoperite \u00een documenta\u0163ie
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Forumurile Zimbra</a> sunt locul ideal pentru a ob\u0163ine r\u0103spunsuri la \u00eentreb\u0103rile dvs. Pute\u0163i c\u0103uta \u00een r\u0103spunsurile din post\u0103ri sau pute\u0163i publica o \u00eentrebare.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> include articole scrise de echipa \u015fi comunitatea de asisten\u0163\u0103 ca r\u0103spuns la problemele de depanare \u015fi de administrare neacoperite \u00een documenta\u0163ie
 HELP_MIG_Q1 = Cum migrez conturi de e-mail de pe serverul Exchange \u00een Zimbra?
 HELP_MIG_Q2 = Cum pot utilizatorii mei s\u0103 importe con\u0163inutul unui fi\u015fier .pst, dintr-o c\u0103su\u0163\u0103 po\u015ftal\u0103 Microsoft Outlook 2003, 2007, 2010, \u00een Zimbra?
 HELP_MIG_Q3 = Cum migrez conturi de e-mail de pe serverul Domino \u00een Zimbra?
