--- a/WebRoot/messages/ZabMsg_sl.properties
+++ b/WebRoot/messages/ZabMsg_sl.properties
@@ -42,7 +42,7 @@ zadeve, ki niso bile zajete v dokumentaciji.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Uporabljate sistem Zimbra z drugimi odjemalci? Poglejte si te vodnike.
 zimbraTitle = Zimbra skrbni\u0161ka konzola
 about_title = Zimbra&trade; skrbni\u0161ka konzola
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra razli\u010dica:
 LBL_HomeHelpCenter = Zimbra center za pomo\u010d
 LBL_HomeMsgCount = \u0160tevilo sporo\u010dil:
@@ -52,10 +52,10 @@ About_Button_Label = O Zimbra razli\u010dici
 zimbraHomePage = Doma\u010da stran Zimbra 
 zimbraAbout = Zimbra - vizitka
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: vodilni odprtokodni odjemalec za sporo\u010danje in sodelovanje :: \
-    <a target="_new" href="http://blog.zimbra.com">Spletni dnevnik</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forumi</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: vodilni odprtokodni odjemalec za sporo\u010danje in sodelovanje :: \
+    <a target="_new" href="https://blog.zimbra.com">Spletni dnevnik</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forumi</a>
 ZWC_END_USER_GUIDE = ZWC Vodnik za kon\u010dnega uporabnika za 8.0
 ZWC_END_USER_GUIDE_INFO = Vodnik za kon\u010dnega uporabnika opisuje funkcije in aplikacije, uporabljene v spletnem odjemalcu Zimbra.
 MessageContent = sporo\u010dilo
@@ -80,8 +80,8 @@ HELP_adminGuideDetail = Skrbni\u0161ki vodnik opi\u0161e arhitekturo sistema Zim
 HELP_usersGuide = Vodnik za kon\u010dne uporabnike
 HELP_usersGuideDetail = Vodnik za kon\u010dnega uporabnika opisuje funkcijo in aplikacije, uporabljene v spletnem odjemalcu Zimbra.
 HELP_askCommunity = Vpra\u0161ajte skupnost
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra forumi</a> so odli\u010den kraj za dobivanje odgovorov na va\u0161a vpra\u0161anja. Lahko poi\u0161\u010dete odgovore med objavami, pa tudi objavite vpra\u0161anje.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> vklju\u010duje \u010dlanke, ki so jih napisali \u010dlani ekipe za podporo in skupnosti v odgovor na re\u0161evanje te\u017eav in skrbni\u0161ke zadeve, ki niso bile zajete v dokumentaciji.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra forumi</a> so odli\u010den kraj za dobivanje odgovorov na va\u0161a vpra\u0161anja. Lahko poi\u0161\u010dete odgovore med objavami, pa tudi objavite vpra\u0161anje.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> vklju\u010duje \u010dlanke, ki so jih napisali \u010dlani ekipe za podporo in skupnosti v odgovor na re\u0161evanje te\u017eav in skrbni\u0161ke zadeve, ki niso bile zajete v dokumentaciji.
 HELP_MIG_Q1 = Kako lahko preselim e-po\u0161tne ra\u010dune stre\u017enika iz Exchange v Zimbra?
 HELP_MIG_Q2 = Kako lahko moji uporabniki uvozijo vsebino datoteke .pst iz po\u0161tnega nabiralnika programa Microsoft Outlook 2003, 2007, 2010 v Zimbra?
 HELP_MIG_Q3 = Kako lahko preselim e-po\u0161tne ra\u010dune stre\u017enika iz Domino v Zimbra?
