--- a/WebRoot/messages/ZabMsg_sv.properties
+++ b/WebRoot/messages/ZabMsg_sv.properties
@@ -36,7 +36,7 @@ HELP_PAGE_13 = Zimbra Wiki inneh\u00e5ller artiklar som supportgruppen och \
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Vill du anv\u00e4nda Zimbra med andra klienter? Se dessa handb\u00f6cker.
 zimbraTitle = Administrationskonsol f\u00f6r Zimbra
 about_title = Administrationskonsol f\u00f6r Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra-version:
 LBL_HomeHelpCenter = Zimbra Hj\u00e4lpcenter
 LBL_HomeMsgCount = Antal meddelanden:
@@ -46,10 +46,10 @@ About_Button_Label = Om Zimbra-version
 zimbraHomePage = Zimbra startsida
 zimbraAbout = Om Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a>: marknadsledande inom open source-kommunikation och samarbete :: \
-    <a target="_new" href="http://blog.zimbra.com">Blogg</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forum</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a>: marknadsledande inom open source-kommunikation och samarbete :: \
+    <a target="_new" href="https://blog.zimbra.com">Blogg</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forum</a>
 ZWC_END_USER_GUIDE = ZWC-anv\u00e4ndarhandbok f\u00f6r 8.0
 ZWC_END_USER_GUIDE_INFO = Anv\u00e4ndarhandboken beskriver funktioner och program som finns i Zimbra Web Client.
 MessageContent = meddelande
@@ -65,8 +65,8 @@ HELP_adminGuideDetail = I administrationsguiden beskrivs systemarkitekturen i Zi
 HELP_usersGuide = Anv\u00e4ndarhandbok
 HELP_usersGuideDetail = Anv\u00e4ndarhandboken beskriver funktioner och program som finns i Zimbra Web Client.
 HELP_askCommunity = Fr\u00e5ga i forumet
-HELP_askCommunityItem1 = F\u00e5 svar p\u00e5 dina fr\u00e5gor i <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forum</a>. Du kan s\u00f6ka efter tidigare svar och skicka in egna fr\u00e5gor.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> inneh\u00e5ller artiklar som supportgruppen och anv\u00e4ndarna har skrivit som svar p\u00e5 olika fels\u00f6knings- och administrationsproblem, som inte omfattas av dokumentationen
+HELP_askCommunityItem1 = F\u00e5 svar p\u00e5 dina fr\u00e5gor i <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forum</a>. Du kan s\u00f6ka efter tidigare svar och skicka in egna fr\u00e5gor.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> inneh\u00e5ller artiklar som supportgruppen och anv\u00e4ndarna har skrivit som svar p\u00e5 olika fels\u00f6knings- och administrationsproblem, som inte omfattas av dokumentationen
 HELP_MIG_Q1 = Hur flyttar jag e-postkonton fr\u00e5n Exchange till Zimbra?
 HELP_MIG_Q2 = Hur kan mina anv\u00e4ndare importera inneh\u00e5ll i en PST-fil fr\u00e5n en Microsoft Outlook 2003-, 2007- eller 2010-postl\u00e5da till Zimbra?
 HELP_MIG_Q3 = Hur flyttar jag e-postkonton fr\u00e5n Domino till Zimbra?
