--- a/WebRoot/messages/ZabMsg_tr.properties
+++ b/WebRoot/messages/ZabMsg_tr.properties
@@ -39,7 +39,7 @@ yan\u0131t olarak yazd\u0131\u011f\u0131 makaleleri i\u00e7ermektedir.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Zimbra'y\u0131 di\u011fer istemcilerle kullan\u0131yor musunuz? Bu k\u0131lavuzlara bak\u0131n.
 zimbraTitle = Zimbra Y\u00f6netici Konsolu
 about_title = Zimbra&trade; Y\u00f6netici Konsolu
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra S\u00fcr\u00fcm\u00fc:
 LBL_HomeHelpCenter = Zimbra Yard\u0131m Merkezi
 LBL_HomeMsgCount = Mesaj Say\u0131s\u0131:
@@ -49,10 +49,10 @@ About_Button_Label = Zimbra S\u00fcr\u00fcm\u00fc Hakk\u0131nda
 zimbraHomePage = Zimbra Ana Sayfas\u0131
 zimbraAbout = Zimbra Hakk\u0131nda...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: a\u00e7\u0131k kaynak mesaj\u0131 al\u0131\u015fveri\u015fi ve birlikte \u00e7al\u0131\u015fmada \u00f6nc\u00fc :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forumlar</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: a\u00e7\u0131k kaynak mesaj\u0131 al\u0131\u015fveri\u015fi ve birlikte \u00e7al\u0131\u015fmada \u00f6nc\u00fc :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forumlar</a>
 ZWC_END_USER_GUIDE = 8.0 i\u00e7in ZW\u0130 Son Kullan\u0131c\u0131 K\u0131lavuzu
 ZWC_END_USER_GUIDE_INFO = Son kullan\u0131c\u0131 k\u0131lavuzu Zimbra Web \u0130stemcisi\u2019nde kullan\u0131lan \u00f6zellikleri ve uygulamalar\u0131 a\u00e7\u0131klar.
 MessageContent = mesaj
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Y\u00f6netici K\u0131lavuzu kitap\u00e7\u0131\u011f\u013
 HELP_usersGuide = Son Kullan\u0131c\u0131lar\u0131n K\u0131lavuzu
 HELP_usersGuideDetail = Son kullan\u0131c\u0131 k\u0131lavuzu Zimbra Web \u0130stemcisi\u2019nde kullan\u0131lan \u00f6zellik ve uygulamalar\u0131 a\u00e7\u0131klar.
 HELP_askCommunity = Toplulu\u011fa Sor
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra Forumlar\u0131</a> sorular\u0131n\u0131za yan\u0131t alabilece\u011finiz en iyi yerdir. G\u00f6nderilerden yan\u0131tlar i\u00e7in arama yapabilir ve soru g\u00f6nderebilirsiniz.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> belgelerin i\u00e7ermedi\u011fi sorunlara y\u00f6nelik destek ekibinin ve toplulu\u011fun sorun giderme ve y\u00f6netimi i\u00e7in yan\u0131t olarak yazd\u0131\u011f\u0131 makaleleri i\u00e7ermektedir.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra Forumlar\u0131</a> sorular\u0131n\u0131za yan\u0131t alabilece\u011finiz en iyi yerdir. G\u00f6nderilerden yan\u0131tlar i\u00e7in arama yapabilir ve soru g\u00f6nderebilirsiniz.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> belgelerin i\u00e7ermedi\u011fi sorunlara y\u00f6nelik destek ekibinin ve toplulu\u011fun sorun giderme ve y\u00f6netimi i\u00e7in yan\u0131t olarak yazd\u0131\u011f\u0131 makaleleri i\u00e7ermektedir.
 HELP_MIG_Q1 = Sunucu e-posta hesaplar\u0131n\u0131n Exchange'den Zimbra'ya ge\u00e7i\u015fini nas\u0131l yapar\u0131m?
 HELP_MIG_Q2 = Kullan\u0131c\u0131lar\u0131m bir .pst dosyas\u0131n\u0131n i\u00e7eriklerini Microsoft Outlook 2003, 2007, 2010 posta kutusundan Zimbra'ya nas\u0131l i\u00e7e aktarabilirler?
 HELP_MIG_Q3 = Sunucu e-posta hesaplar\u0131n\u0131n Domino'dan Zimbra'ya ge\u00e7i\u015fini nas\u0131l yapar\u0131m?
