--- a/WebRoot/messages/ZabMsg_zh_CN.properties
+++ b/WebRoot/messages/ZabMsg_zh_CN.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra wiki \u5305\u62ec\u4e86\u6280\u672f\u652f\u6301\u5c0f\u7ec
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = \u8981\u5728\u5176\u4ed6\u5ba2\u6237\u7aef\u4e0a\u4f7f\u7528 Zimbra \u5417? \u8bf7\u67e5\u9605\u8fd9\u4e9b\u6307\u5357\u3002
 zimbraTitle = Zimbra \u7ba1\u7406\u63a7\u5236\u53f0
 about_title = Zimbra&trade; \u7ba1\u7406\u63a7\u5236\u53f0
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra \u7248\u672c:
 LBL_HomeHelpCenter = Zimbra \u5e2e\u52a9\u4e2d\u5fc3
 LBL_HomeMsgCount = \u90ae\u4ef6\u8ba1\u6570:
@@ -49,10 +49,10 @@ About_Button_Label = \u5173\u4e8e Zimbra \u7248\u672c
 zimbraHomePage = Zimbra \u4e3b\u9875
 zimbraAbout = \u5173\u4e8e Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> ::\u5f00\u6e90\u901a\u8baf\u548c\u534f\u4f5c\u529e\u516c\u7cfb\u7edf\u7684\u4e1a\u754c\u9886\u8896 :: \
-    <a target="_new" href="http://blog.zimbra.com">\u535a\u5ba2</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">\u8bba\u575b</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> ::\u5f00\u6e90\u901a\u8baf\u548c\u534f\u4f5c\u529e\u516c\u7cfb\u7edf\u7684\u4e1a\u754c\u9886\u8896 :: \
+    <a target="_new" href="https://blog.zimbra.com">\u535a\u5ba2</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">\u8bba\u575b</a>
 ZWC_END_USER_GUIDE = ZWC \u6700\u7ec8\u7528\u6237\u6307\u5357 8.0
 ZWC_END_USER_GUIDE_INFO = \u6700\u7ec8\u7528\u6237\u6307\u5357\u63cf\u8ff0\u4e86 Zimbra \u7f51\u7edc\u5ba2\u6237\u7aef\u4f7f\u7528\u7684\u529f\u80fd\u548c\u5e94\u7528\u7a0b\u5e8f\u3002
 MessageContent = \u90ae\u4ef6
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = \u7ba1\u7406\u5411\u5bfc\u624b\u518c\u63cf\u8ff0\u4e86 Z
 HELP_usersGuide = \u6700\u7ec8\u7528\u6237\u6307\u5357
 HELP_usersGuideDetail = \u6700\u7ec8\u7528\u6237\u6307\u5357\u63cf\u8ff0\u4e86 Zimbra \u7f51\u7edc\u5ba2\u6237\u7aef\u4f7f\u7528\u7684\u5404\u9879\u529f\u80fd\u548c\u5e94\u7528\u7a0b\u5e8f\u3002
 HELP_askCommunity = \u8be2\u95ee\u793e\u533a
-HELP_askCommunityItem1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="http://www.zimbra.com/forums">Zimbra \u8bba\u575b</a>\u4e2d\u627e\u5230\u5f88\u591a\u95ee\u9898\u7684\u7b54\u6848\u3002\u60a8\u53ef\u4ee5\u4ece\u53d1\u5e03\u7684\u5e16\u5b50\u4e2d\u641c\u7d22\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u53d1\u5e16\u63d0\u51fa\u60a8\u7684\u95ee\u9898\u3002
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u672f\u652f\u6301\u5c0f\u7ec4\u548c\u793e\u533a\u9488\u5bf9\u6545\u969c\u6392\u9664\u548c\u7ba1\u7406\u95ee\u9898\u5199\u7684\u6ca1\u6709\u5728\u6b63\u5f0f\u6587\u6863\u4e2d\u5305\u62ec\u7684\u89e3\u51b3\u95ee\u9898\u7684\u65b9\u6cd5\u3002
+HELP_askCommunityItem1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="https://www.zimbra.com/forums">Zimbra \u8bba\u575b</a>\u4e2d\u627e\u5230\u5f88\u591a\u95ee\u9898\u7684\u7b54\u6848\u3002\u60a8\u53ef\u4ee5\u4ece\u53d1\u5e03\u7684\u5e16\u5b50\u4e2d\u641c\u7d22\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u53d1\u5e16\u63d0\u51fa\u60a8\u7684\u95ee\u9898\u3002
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u672f\u652f\u6301\u5c0f\u7ec4\u548c\u793e\u533a\u9488\u5bf9\u6545\u969c\u6392\u9664\u548c\u7ba1\u7406\u95ee\u9898\u5199\u7684\u6ca1\u6709\u5728\u6b63\u5f0f\u6587\u6863\u4e2d\u5305\u62ec\u7684\u89e3\u51b3\u95ee\u9898\u7684\u65b9\u6cd5\u3002
 HELP_MIG_Q1 = \u5982\u4f55\u5c06\u670d\u52a1\u5668\u7535\u5b50\u90ae\u4ef6\u5e10\u6237\u4ece Exchange \u8fc1\u79fb\u5230 Zimbra?
 HELP_MIG_Q2 = \u6211\u7684\u7528\u6237\u5982\u4f55\u5c06 .pst \u6587\u4ef6\u5185\u5bb9\u4ece Microsoft Outlook 2003\u30012007\u30012010 \u90ae\u7bb1\u5bfc\u5165 Zimbra?
 HELP_MIG_Q3 = \u5982\u4f55\u5c06\u670d\u52a1\u5668\u7535\u5b50\u90ae\u4ef6\u5e10\u6237\u4ece Domino \u8fc1\u79fb\u5230 Zimbra?
