--- a/WebRoot/messages/ZaMsg_eu.properties
+++ b/WebRoot/messages/ZaMsg_eu.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Azken erabiltzailearen eskuliburua, Microsoft Outlook-e
 
 title_ask_community = Galdetu komunitateari
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra-ko foroak</a>, zure galderei erantzuteko \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra-ko foroak</a>, zure galderei erantzuteko \
  leku paregabeak dira. Erantzunak argitaratutako mezuetan bila ditzakezu, edo galdera argitaratu.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki </a>-ak, laguntza-taldeak eta  \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki </a>-ak, laguntza-taldeak eta  \
  komunitateak idatzitako artikuluak biltzen ditu, arazoak konpontzeko eta dokumentazioan \
 agertzen ez diren  galderei erantzuteko.
 
@@ -1790,10 +1790,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Zehaztutako bolumena jada badago.
 ERROR_MAX_ACCOUNT_QUOTA = Kontuaren kuotak ez du balio. Kontuaren kuotak gainditu egiten du domeinuaren administratzaileak erabiltzaileei gehienez ezar diezaiekeen posta-kuota.
 
 ERROR_LICENSE = Lizentzia-errore bat hauteman da 
-ERROR_NO_VALID_SUBNETS = Errorea! {0} balioa ez da azpisareen baliozko zerrenda bat. Kontsultatu MTA Trusted Networks sareen konfigurazioari buruzko informazioa lortzeko dokumentazioa. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_MISSING_LOCAL = Errorea! MTA Trusted Networks sareen balioak interfaze lokalak hartu behar ditu barnean: {0}. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_NOT_CIDR = Errorea! {0} ez da baliozko azpisare-balioa CIDR formatuan! <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
-ERROR_NOT_STARTING_ADDR = Errorea! Bit batzuk ez dira nuluak zerbitzariaren helbidean, hemen: {0}; agian hobe zenuke {1} erabili. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NO_VALID_SUBNETS = Errorea! {0} balioa ez da azpisareen baliozko zerrenda bat. Kontsultatu MTA Trusted Networks sareen konfigurazioari buruzko informazioa lortzeko dokumentazioa. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_MISSING_LOCAL = Errorea! MTA Trusted Networks sareen balioak interfaze lokalak hartu behar ditu barnean: {0}. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NOT_CIDR = Errorea! {0} ez da baliozko azpisare-balioa CIDR formatuan! <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
+ERROR_NOT_STARTING_ADDR = Errorea! Bit batzuk ez dira nuluak zerbitzariaren helbidean, hemen: {0}; agian hobe zenuke {1} erabili. <br/>Hemen aurkituko duzu MTA Trusted Networks sareen konfigurazioari buruzko informazio gehiago:<a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>
 ERROR_LOCAL_ADDR_EXCLUDED = Errorea! {0} interfaze lokalaren helbidea MTA Trusted Networks sareetatik kanpo dago, {1} sarreraren bidez.  
 ERROR_INVALID_EXCLUDE_ADDR = Errorea! {0} ez da baliozko IP helbide edo sare-maskara bat.
 ERROR_INVALID_IP_ADDR = IP helbide ez baliagarria
@@ -2187,7 +2187,7 @@ Share_PublishNewTitle = Argitaratu partekatutako elementu berria
 
 splashScreenLoading = Kargatzen...
 splashScreenAppName = Administrazio-kontsola
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Bertsioa
 rememberMe = Gogoratu erabiltzailea ordenagailu honetan
 
