--- a/WebRoot/messages/ZaMsg_ms.properties
+++ b/WebRoot/messages/ZaMsg_ms.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Panduan Pengguna Akhir kepada Penyambung Zimbra untuk M
 
 title_ask_community = Tanya Komuniti
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat terbaik bagi mendapatkan \
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat terbaik bagi mendapatkan \
 jawapan untuk pertanyaan anda. Anda boleh mencari jawapan dari siaran dan anda boleh menyiarkan soalan.
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> menyertakan artikel yang telah ditulis oleh \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> menyertakan artikel yang telah ditulis oleh \
 pasukan sokongan dan komuniti sebagai respons kepada isu penyelesaian masalah dan pentadbiran yang tidak diliputi dalam \
 dokumentasi
 
@@ -1795,10 +1795,10 @@ ERROR_VOLUME_ALREADY_EXISTS = Volum yang ditentukan sudah wujud!
 ERROR_MAX_ACCOUNT_QUOTA = Nilai tidak sah bagi kuota akaun! Kuota akaun melebihi bilangan maksimum bagi kuota mel yang pentadbir domain dapat sediakan kepada seseorang pengguna.
 
 ERROR_LICENSE = Ralat lesen ditemui 
-ERROR_NO_VALID_SUBNETS = Ralat! Nilai {0} bukan senarai subnet yang sah. Sila rujuk dokumentasi untuk mendapatkan bantuan tentang cara mengkonfigurasi Rangkaian Dipercayai MTA. <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_MISSING_LOCAL = Ralat! Nilai untuk Rangkaian Dipercayai MTA mesti mengandungi antara muka rangkaian tempatan: {0}. <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_CIDR = Ralat! {0} bukan nilai subnet yang sah dalam notasi CIDR! <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
-ERROR_NOT_STARTING_ADDR = Ralat! bit alamat hos bukan nol dalam {0}, barangkali anda harus gunakan {1}! <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NO_VALID_SUBNETS = Ralat! Nilai {0} bukan senarai subnet yang sah. Sila rujuk dokumentasi untuk mendapatkan bantuan tentang cara mengkonfigurasi Rangkaian Dipercayai MTA. <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_MISSING_LOCAL = Ralat! Nilai untuk Rangkaian Dipercayai MTA mesti mengandungi antara muka rangkaian tempatan: {0}. <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_CIDR = Ralat! {0} bukan nilai subnet yang sah dalam notasi CIDR! <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
+ERROR_NOT_STARTING_ADDR = Ralat! bit alamat hos bukan nol dalam {0}, barangkali anda harus gunakan {1}! <br/>Maklumat Tambahan tentang konfigurasi Rangkaian Dipercayai MTA boleh ditemui di <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>.
 ERROR_LOCAL_ADDR_EXCLUDED = Ralat! Alamat antara muka tempatan {0} dikecualikan daripada Rangkaian Dipercayai MTA oleh entri {1}.  
 ERROR_INVALID_EXCLUDE_ADDR = Ralat! {0} bukan alamat IP atau topeng rangkaian yang sah.
 ERROR_INVALID_IP_ADDR = Alamat IP tidak sah
@@ -2194,7 +2194,7 @@ Share_PublishNewTitle = Terbitkan Perkongsian Baharu
 
 splashScreenLoading = Memuat ...
 splashScreenAppName = Konsol Pentadbiran
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = Versi
 rememberMe = Ingat saya
 
