--- a/WebRoot/messages/ZaMsg_zh_CN.properties
+++ b/WebRoot/messages/ZaMsg_zh_CN.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Zimbra Connector Microsoft Outlook \u7248\u6700\u7ec8\u
 
 title_ask_community = \u8be2\u95ee\u793e\u533a
 
-desc_ask_community_1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="http://www.zimbra.com/forums">Zimbra \u8bba\u575b</a>\u4e2d\u627e\u5230\
+desc_ask_community_1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="https://www.zimbra.com/forums">Zimbra \u8bba\u575b</a>\u4e2d\u627e\u5230\
   \u5f88\u591a\u95ee\u9898\u7684\u7b54\u6848\u3002\u60a8\u53ef\u4ee5\u4ece\u53d1\u5e03\u7684\u5e16\u5b50\u4e2d\u641c\u7d22\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u53d1\u5e16\u63d0\u51fa\u60a8\u7684\u95ee\u9898\u3002
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u672f\u652f\u6301\u5c0f\u7ec4 \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u672f\u652f\u6301\u5c0f\u7ec4 \
   \u548c\u793e\u533a\u9488\u5bf9\u6545\u969c\u6392\u9664\u548c\u7ba1\u7406\u95ee\u9898\u63d0\u4f9b\u7684\u6ca1\u6709\u5728\u6b63\u5f0f\u6587\u6863\u4e2d\u5305\u62ec\u7684\u89e3\u51b3\u95ee\u9898\u7684\
   \u65b9\u6cd5
 
@@ -1787,10 +1787,10 @@ ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u5377\u5df2\u5b58\u5728!
 ERROR_MAX_ACCOUNT_QUOTA = \u5e10\u6237\u9650\u989d\u65e0\u6548\uff01\u5e10\u6237\u9650\u989d\u5df2\u8d85\u8fc7\u57df\u7ba1\u7406\u5458\u80fd\u4e3a\u7528\u6237\u8bbe\u7f6e\u7684\u90ae\u4ef6\u6570\u91cf\u9650\u989d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u8bb8\u53ef\u8bc1\u51fa\u73b0\u95ee\u9898 
-ERROR_NO_VALID_SUBNETS = \u9519\u8bef\uff01 \u503c {0} \u5e76\u975e\u6709\u6548\u7684\u5b50\u7f51\u5217\u8868\u3002 \u6709\u5173 MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1\u76f8\u5173\u8bf4\u660e\u6587\u6863\u3002 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_MISSING_LOCAL = \u9519\u8bef\uff01 MTA \u53ef\u4fe1\u7f51\u7edc\u4e2d\u5fc5\u987b\u5305\u62ec\u672c\u5730\u7f51\u7edc\u754c\u9762\uff1a {0}\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_CIDR = \u9519\u8bef\uff01CIDR \u8bb0\u53f7\u4e2d\u7684\u5b50\u7f51\u503c {0} \u65e0\u6548\uff01 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_STARTING_ADDR = \u9519\u8bef\uff01{0} \u6709\u975e\u96f6\u4e3b\u673a\u5730\u5740\u4f4d\uff0c\u60a8\u4e5f\u8bb8\u5e94\u4f7f\u7528 {1}\uff01 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NO_VALID_SUBNETS = \u9519\u8bef\uff01 \u503c {0} \u5e76\u975e\u6709\u6548\u7684\u5b50\u7f51\u5217\u8868\u3002 \u6709\u5173 MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1\u76f8\u5173\u8bf4\u660e\u6587\u6863\u3002 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_MISSING_LOCAL = \u9519\u8bef\uff01 MTA \u53ef\u4fe1\u7f51\u7edc\u4e2d\u5fc5\u987b\u5305\u62ec\u672c\u5730\u7f51\u7edc\u754c\u9762\uff1a {0}\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_CIDR = \u9519\u8bef\uff01CIDR \u8bb0\u53f7\u4e2d\u7684\u5b50\u7f51\u503c {0} \u65e0\u6548\uff01 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_STARTING_ADDR = \u9519\u8bef\uff01{0} \u6709\u975e\u96f6\u4e3b\u673a\u5730\u5740\u4f4d\uff0c\u60a8\u4e5f\u8bb8\u5e94\u4f7f\u7528 {1}\uff01 <br/>\u66f4\u591a MTA \u53ef\u4fe1\u7f51\u7edc\u5728\u914d\u7f6e\u65b9\u9762\u7684\u8bf4\u660e\uff0c\u8bf7\u89c1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
 ERROR_LOCAL_ADDR_EXCLUDED = \u9519\u8bef\uff01{1} \u5df2\u4ece MTA \u53ef\u4fe1\u7f51\u7edc\u4e2d\u6392\u9664\u4e86\u672c\u5730\u63a5\u53e3\u5730\u5740 {0}\u3002  
 ERROR_INVALID_EXCLUDE_ADDR = \u9519\u8bef\uff01{0} \u5e76\u975e\u6709\u6548\u7684 IP \u5730\u5740\u6216\u7f51\u7edc\u63a9\u7801\u3002
 ERROR_INVALID_IP_ADDR = IP \u5730\u5740\u65e0\u6548
@@ -2181,7 +2181,7 @@ Share_PublishNewTitle = \u53d1\u8868\u65b0\u7684\u5171\u4eab\u9879
 
 splashScreenLoading = \u52a0\u8f7d\u4e2d ...
 splashScreenAppName = \u7ba1\u7406\u63a7\u5236\u53f0
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = \u7248\u672c
 rememberMe = \u8bb0\u4f4f\u6211
 
