--- a/WebRoot/messages/ZaMsg_zh_HK.properties
+++ b/WebRoot/messages/ZaMsg_zh_HK.properties
@@ -92,10 +92,10 @@ sub_desc_help_center_3 = Zimbra Connector \u6700\u7d42\u7528\u6236\u6307\u5357 M
 
 title_ask_community = \u5411\u793e\u7fa4\u63d0\u554f
 
-desc_ask_community_1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u975e\u5e38\u4fbf\u65bc\u7528\u6236\u5c0b\u627e\u554f\u984c\u7684\u7b54\u6848\u3002\
+desc_ask_community_1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u975e\u5e38\u4fbf\u65bc\u7528\u6236\u5c0b\u627e\u554f\u984c\u7684\u7b54\u6848\u3002\
  \u4f60\u53ef\u641c\u5c0b\u7db2\u53cb\u5011\u63d0\u4f9b\u7684\u7b54\u6848\uff0c\u4e26\u53ef\u96a8\u6642\u63d0\u554f\u5404\u985e\u554f\u984c\u3002
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> \u4e2d\u5305\u62ec\u6280\u8853\u652f\u63f4\u5718\u968a\u548c\u793e\u7fa4\u91dd\u5c0d\u8aaa\u660e\u66f8\u4e2d\u6c92\u6709\u63d0\u53ca\u7684\u6545\u969c\u6392\u9664\u548c\u7ba1\u7406\u4e8b\u5b9c\u64b0\u5beb\u7684\u6587\u7ae0\u3002
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> \u4e2d\u5305\u62ec\u6280\u8853\u652f\u63f4\u5718\u968a\u548c\u793e\u7fa4\u91dd\u5c0d\u8aaa\u660e\u66f8\u4e2d\u6c92\u6709\u63d0\u53ca\u7684\u6545\u969c\u6392\u9664\u548c\u7ba1\u7406\u4e8b\u5b9c\u64b0\u5beb\u7684\u6587\u7ae0\u3002
 
 title_top_migration_questions = \u6709\u95dc\u9077\u79fb\u63d0\u554f\u6700\u591a\u7684\u554f\u984c
 
@@ -1763,10 +1763,10 @@ ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u5377\u518a\u540d\u7a31\u5df2\u
 ERROR_MAX_ACCOUNT_QUOTA = \u5e33\u6236\u9650\u984d\u503c\u7121\u6548\uff01\u5e33\u6236\u9650\u984d\u5df2\u8d85\u904e\u7db2\u57df\u7ba1\u7406\u54e1\u80fd\u70ba\u7528\u6236\u8a2d\u5b9a\u7684\u90f5\u4ef6\u6578\u91cf\u9650\u984d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u6388\u6b0a\u8a31\u53ef\u51fa\u73fe\u554f\u984c 
-ERROR_NO_VALID_SUBNETS = \u932f\u8aa4\uff01\u503c {0} \u4e26\u975e\u6709\u6548\u7684\u5b50\u7db2\u7d61\u6e05\u55ae\u3002\u6709\u95dc MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b\u76f8\u95dc\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_MISSING_LOCAL = \u932f\u8aa4\uff01MTA \u53ef\u4fe1\u7db2\u7d61\u4e2d\u5fc5\u9808\u5305\u542b\u672c\u5730\u7db2\u7d61\u4ecb\u9762\uff1a{0}\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_CIDR = \u932f\u8aa4\uff01CIDR \u8a18\u865f\u4e2d\u7684\u5b50\u7db2\u7d61\u503c {0} \u7121\u6548\uff01<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_STARTING_ADDR = \u932f\u8aa4\uff01{0} \u6709\u975e\u96f6\u4e3b\u6a5f\u5730\u5740\u4f4d\u5143\uff0c\u60a8\u4e5f\u8a31\u61c9\u4f7f\u7528 {1}\uff01<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NO_VALID_SUBNETS = \u932f\u8aa4\uff01\u503c {0} \u4e26\u975e\u6709\u6548\u7684\u5b50\u7db2\u7d61\u6e05\u55ae\u3002\u6709\u95dc MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b\u76f8\u95dc\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_MISSING_LOCAL = \u932f\u8aa4\uff01MTA \u53ef\u4fe1\u7db2\u7d61\u4e2d\u5fc5\u9808\u5305\u542b\u672c\u5730\u7db2\u7d61\u4ecb\u9762\uff1a{0}\u3002<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_CIDR = \u932f\u8aa4\uff01CIDR \u8a18\u865f\u4e2d\u7684\u5b50\u7db2\u7d61\u503c {0} \u7121\u6548\uff01<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_STARTING_ADDR = \u932f\u8aa4\uff01{0} \u6709\u975e\u96f6\u4e3b\u6a5f\u5730\u5740\u4f4d\u5143\uff0c\u60a8\u4e5f\u8a31\u61c9\u4f7f\u7528 {1}\uff01<br/>\u66f4\u591a MTA \u53ef\u4fe1\u7db2\u7d61\u5728\u8a2d\u5b9a\u65b9\u9762\u7684\u8aaa\u660e\uff0c\u8acb\u898b <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
 ERROR_LOCAL_ADDR_EXCLUDED = \u932f\u8aa4\uff01{1} \u5df2\u5f9e MTA \u53ef\u4fe1\u7db2\u7d61\u4e2d\u6392\u9664\u4e86\u672c\u6a5f\u4ecb\u9762\u4f4d\u5740 {0}\u3002  
 ERROR_INVALID_EXCLUDE_ADDR = \u932f\u8aa4\uff01{0} \u4e26\u975e\u6709\u6548\u7684 IP \u4f4d\u5740\u6216\u7db2\u7d61\u906e\u7f69\u3002
 ERROR_INVALID_IP_ADDR = \u7121\u6548\u7684 IP \u4f4d\u5740
@@ -2139,7 +2139,7 @@ Share_PublishNewTitle = \u767c\u8868\u65b0\u7684\u5206\u4eab\u9805
 
 splashScreenLoading = \u8f09\u5165\u4e2d ...
 splashScreenAppName = \u7cfb\u7d71\u7ba1\u7406\u63a7\u5236\u53f0
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = \u7248\u672c
 rememberMe = \u8a18\u4f4f\u6211
 
