--- a/WebRoot/messages/ZaMsg_zh_TW.properties
+++ b/WebRoot/messages/ZaMsg_zh_TW.properties
@@ -94,10 +94,10 @@ sub_desc_help_center_3 = Zimbra Connector Microsoft Outlook \u7248\u4e00\u822c\u
 
 title_ask_community = \u8a62\u554f\u793e\u7fa4
 
-desc_ask_community_1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="http://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u4e2d\u627e\u5230\u554f\u984c\u7684\
+desc_ask_community_1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="https://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u4e2d\u627e\u5230\u554f\u984c\u7684\
   \u89e3\u7b54\u3002\u60a8\u53ef\u4ee5\u5f9e\u5e16\u6587\u4e2d\u641c\u5c0b\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u5e16\u6587\u63d0\u51fa\u554f\u984c\u3002
 
-desc_ask_community_2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u8853\u652f\u63f4\u5c0f\u7d44 \
+desc_ask_community_2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u62ec\u4e86\u6280\u8853\u652f\u63f4\u5c0f\u7d44 \
   \u548c\u793e\u7fa4\u91dd\u5c0d\u7591\u96e3\u6392\u89e3\u548c\u7ba1\u7406\u554f\u984c (\u672a\u5305\u542b\u5728\u8aaa\u660e\u6587\u4ef6\u4e2d) \u6240\u64b0\u5beb\u7684\
   \u6587\u7ae0
 
@@ -1794,10 +1794,10 @@ ERROR_VOLUME_ALREADY_EXISTS = \u6307\u5b9a\u7684\u78c1\u789f\u5340\u5df2\u5b58\u
 ERROR_MAX_ACCOUNT_QUOTA = \u5e33\u6236\u9650\u984d\u7121\u6548\uff01\u5e33\u6236\u9650\u984d\u5df2\u8d85\u904e\u7db2\u57df\u7ba1\u7406\u54e1\u80fd\u70ba\u7528\u6236\u8a2d\u5b9a\u7684\u90f5\u4ef6\u6578\u91cf\u9650\u984d\u4e0a\u9650\u3002
 
 ERROR_LICENSE = \u6388\u6b0a\u51fa\u73fe\u554f\u984c 
-ERROR_NO_VALID_SUBNETS = \u932f\u8aa4! \u503c {0} \u4e0d\u662f\u6709\u6548\u7684\u5b50\u7db2\u8def\u6e05\u55ae\u3002\u5982\u9700\u6709\u95dc\u8a2d\u5b9a MTA \u4fe1\u4efb\u7db2\u8def\u7684\u8aaa\u660e\uff0c\u8acb\u53c3\u95b1\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_MISSING_LOCAL = \u932f\u8aa4! MTA \u4fe1\u4efb\u7db2\u8def\u4e2d\u5fc5\u9808\u5305\u62ec\u5340\u57df\u7db2\u8def\u4ecb\u9762: {0}\u3002<br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_CIDR = \u932f\u8aa4! CIDR \u6a19\u8a18\u6cd5\u4e2d\u7684\u5b50\u7db2\u8def\u503c {0} \u7121\u6548! <br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
-ERROR_NOT_STARTING_ADDR = \u932f\u8aa4! {0} \u6709\u975e Null \u4e3b\u6a5f\u4f4d\u5740\u4f4d\u5143\uff0c\u6216\u8a31\u60a8\u61c9\u8a72\u6539\u7528{1}! <br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">http://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NO_VALID_SUBNETS = \u932f\u8aa4! \u503c {0} \u4e0d\u662f\u6709\u6548\u7684\u5b50\u7db2\u8def\u6e05\u55ae\u3002\u5982\u9700\u6709\u95dc\u8a2d\u5b9a MTA \u4fe1\u4efb\u7db2\u8def\u7684\u8aaa\u660e\uff0c\u8acb\u53c3\u95b1\u8aaa\u660e\u6587\u4ef6\u3002<br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_MISSING_LOCAL = \u932f\u8aa4! MTA \u4fe1\u4efb\u7db2\u8def\u4e2d\u5fc5\u9808\u5305\u62ec\u5340\u57df\u7db2\u8def\u4ecb\u9762: {0}\u3002<br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_CIDR = \u932f\u8aa4! CIDR \u6a19\u8a18\u6cd5\u4e2d\u7684\u5b50\u7db2\u8def\u503c {0} \u7121\u6548! <br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
+ERROR_NOT_STARTING_ADDR = \u932f\u8aa4! {0} \u6709\u975e Null \u4e3b\u6a5f\u4f4d\u5740\u4f4d\u5143\uff0c\u6216\u8a31\u60a8\u61c9\u8a72\u6539\u7528{1}! <br/>\u6709\u95dc MTA \u4fe1\u4efb\u7db2\u8def\u8a2d\u5b9a\u7684\u8a73\u7d30\u8cc7\u8a0a\uff0c\u8acb\u53c3\u95b1 <a target="new" href="https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks">https://wiki.zimbra.com/index.php?title=ZimbraMtaMyNetworks</a>\u3002
 ERROR_LOCAL_ADDR_EXCLUDED = \u932f\u8aa4! \u9805\u76ee {1} \u5df2\u5f9e MTA \u4fe1\u4efb\u7db2\u8def\u4e2d\u6392\u9664\u672c\u6a5f\u4ecb\u9762\u4f4d\u5740 {0}\u3002  
 ERROR_INVALID_EXCLUDE_ADDR = \u932f\u8aa4! {0} \u4e0d\u662f\u6709\u6548\u7684 IP \u4f4d\u5740\u6216\u7db2\u8def\u906e\u7f69\u3002
 ERROR_INVALID_IP_ADDR = IP \u4f4d\u5740\u7121\u6548
@@ -2192,7 +2192,7 @@ Share_PublishNewTitle = \u767c\u4f48\u65b0\u7684\u5171\u7528\u9805
 
 splashScreenLoading = \u6b63\u5728\u8f09\u5165 ...
 splashScreenAppName = \u7ba1\u7406\u4e3b\u63a7\u53f0
-splashScreenZimbraUrl = <a href='http://www.zimbra.com' target=_blank>http://www.zimbra.com</a>
+splashScreenZimbraUrl = <a href='https://www.zimbra.com' target=_blank>https://www.zimbra.com</a>
 splashScreenVersion = \u7248\u672c
 rememberMe = \u8a18\u4f4f\u6211
 
