--- a/WebRoot/messages/ZabMsg_es.properties
+++ b/WebRoot/messages/ZabMsg_es.properties
@@ -39,7 +39,7 @@ resoluci\u00f3n de problemas y administraci\u00f3n no incluidas en la documentac
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = \u00bfUtilizas Zimbra con otros clientes? Comprueba estas gu\u00edas.
 zimbraTitle = Consola de administraci\u00f3n de Zimbra
 about_title = Consola de administraci\u00f3n de Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versi\u00f3n de Zimbra:
 LBL_HomeHelpCenter = Centro de ayuda de Zimbra
 LBL_HomeMsgCount = Recuento de mensajes:
@@ -49,10 +49,10 @@ About_Button_Label = Acerca de la versi\u00f3n de Zimbra
 zimbraHomePage = P\u00e1gina principal de Zimbra
 zimbraAbout = Acerca de Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> : el l\u00edder en la mensajer\u00eda abierta y colaboraci\u00f3n: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Foros</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> : el l\u00edder en la mensajer\u00eda abierta y colaboraci\u00f3n: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Foros</a>
 ZWC_END_USER_GUIDE = Manual de usuario final de ZWC para 8.0
 ZWC_END_USER_GUIDE_INFO = El manual de usuario final describe las funciones y aplicaciones usadas en el programa en l\u00ednea de Zimbra.
 MessageContent = mensaje
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = El manual de la Gu\u00eda de administraci\u00f3n describ
 HELP_usersGuide = Manual de usuario final
 HELP_usersGuideDetail = El manual de usuario final describe las funciones y aplicaciones usadas en el cliente web de Zimbra.
 HELP_askCommunity = Pregunta a la comunidad
-HELP_askCommunityItem1 = Los <a target="_new" href="http://www.zimbra.com/forums">foros de Zimbra</a> son un gran lugar para obtener respuestas a tus preguntas. Puedes buscar respuestas en los mensajes publicados y puedes publicar tu pregunta.
-HELP_askCommunityItem2 = El <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> incluye art\u00edculos que el equipo de soporte y la comunidad de usuarios han escrito para responder a cuestiones de resoluci\u00f3n de problemas y administraci\u00f3n no incluidas en la documentaci\u00f3n.
+HELP_askCommunityItem1 = Los <a target="_new" href="https://www.zimbra.com/forums">foros de Zimbra</a> son un gran lugar para obtener respuestas a tus preguntas. Puedes buscar respuestas en los mensajes publicados y puedes publicar tu pregunta.
+HELP_askCommunityItem2 = El <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> incluye art\u00edculos que el equipo de soporte y la comunidad de usuarios han escrito para responder a cuestiones de resoluci\u00f3n de problemas y administraci\u00f3n no incluidas en la documentaci\u00f3n.
 HELP_MIG_Q1 = \u00bfC\u00f3mo hago para migrar cuentas de correo electr\u00f3nico de servidor de Exchange a Zimbra?
 HELP_MIG_Q2 = \u00bfC\u00f3mo pueden hacer mis usuarios para importar el contenido de un archivo .pst de un buz\u00f3n de correo de Microsoft Outlook 2003, 2007, 2010 a Zimbra?
 HELP_MIG_Q3 = \u00bfC\u00f3mo hago para migrar cuentas de correo electr\u00f3nico de servidor de Domino a Zimbra?
