--- a/WebRoot/messages/ZabMsg_ko.properties
+++ b/WebRoot/messages/ZabMsg_ko.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra \uc704\ud0a4\uc5d0\ub294 \uc124\uba85\uc11c\uc5d0\uc11c \u
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = \ub2e4\ub978 \ud074\ub77c\uc774\uc5b8\ud2b8\uc5d0\uc11c Zimbra\ub97c \uc0ac\uc6a9\ud558\ub824\uba74 \uc774 \uc548\ub0b4\uc11c\ub97c \ucc38\uc870\ud558\uc2ed\uc2dc\uc624.
 zimbraTitle = Zimbra \uad00\ub9ac \ucf58\uc194
 about_title = Zimbra&trade; \uad00\ub9ac \ucf58\uc194
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra \ubc84\uc804:
 LBL_HomeHelpCenter = Zimbra \ub3c4\uc6c0\ub9d0 \uc13c\ud130
 LBL_HomeMsgCount = \uba54\uc2dc\uc9c0 \uc218:
@@ -49,10 +49,10 @@ About_Button_Label = Zimbra \ubc84\uc804 \uc815\ubcf4
 zimbraHomePage = Zimbra \ud648 \ud398\uc774\uc9c0
 zimbraAbout = Zimbra \uc815\ubcf4...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: \uacf5\uac1c \uc18c\uc2a4 \uba54\uc2dc\uc9d5 \ubc0f \uacf5\ub3d9 \uc791\uc5c5\uc758 \uc120\ub450\uc790 :: \
-    <a target="_new" href="http://blog.zimbra.com">\ube14\ub85c\uadf8</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">\uc704\ud0a4</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">\ud3ec\ub7fc</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: \uacf5\uac1c \uc18c\uc2a4 \uba54\uc2dc\uc9d5 \ubc0f \uacf5\ub3d9 \uc791\uc5c5\uc758 \uc120\ub450\uc790 :: \
+    <a target="_new" href="https://blog.zimbra.com">\ube14\ub85c\uadf8</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">\uc704\ud0a4</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">\ud3ec\ub7fc</a>
 ZWC_END_USER_GUIDE = 8.0 \ubc84\uc804\uc6a9 ZWC \uc0ac\uc6a9\uc790 \uc548\ub0b4\uc11c
 ZWC_END_USER_GUIDE_INFO = \uc0ac\uc6a9\uc790 \uc548\ub0b4\uc11c\ub294 Zimbra \uc6f9 \ud074\ub77c\uc774\uc5b8\ud2b8\uc5d0\uc11c \uc0ac\uc6a9\ub41c \uae30\ub2a5\uacfc \uc751\uc6a9 \ud504\ub85c\uadf8\ub7a8\uc744 \uc124\uba85\ud569\ub2c8\ub2e4.
 MessageContent = \uba54\uc2dc\uc9c0
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = \uad00\ub9ac \uc548\ub0b4\uc11c\uc5d0\uc11c\ub294 Zimbra
 HELP_usersGuide = \uc0ac\uc6a9\uc790 \uc548\ub0b4\uc11c
 HELP_usersGuideDetail = \uc0ac\uc6a9\uc790 \uc548\ub0b4\uc11c\uc5d0\uc11c\ub294 Zimbra \uc6f9 \ud074\ub77c\uc774\uc5b8\ud2b8\uc5d0\uc11c \uc0ac\uc6a9\ub41c \uae30\ub2a5\uacfc \uc751\uc6a9 \ud504\ub85c\uadf8\ub7a8\uc744 \uc124\uba85\ud569\ub2c8\ub2e4.
 HELP_askCommunity = \ucee4\ubba4\ub2c8\ud2f0\uc5d0 \uc9c8\ubb38
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Zimbra \ud3ec\ub7fc</a>\uc740 \uc9c8\ubb38\uc5d0 \ub300\ud55c \ub2f5\uc744 \uc5bb\uc744 \uc218 \uc788\ub294 \uc720\uc6a9\ud55c \uc0ac\uc774\ud2b8\uc785\ub2c8\ub2e4. \uc774\ubbf8 \uc62c\ub77c\uc640 \uc788\ub294 \ub0b4\uc6a9\uc5d0\uc11c \ub2f5\uc744 \uac80\uc0c9\ud558\uac70\ub098 \uc9c8\ubb38\uc744 \uc62c\ub9b4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra \uc704\ud0a4</a>\uc5d0\ub294 \uc124\uba85\uc11c\uc5d0\uc11c \ub2e4\ub8e8\uc9c0 \uc54a\uc740 \ubb38\uc81c \ud574\uacb0 \ubc0f \uad00\ub9ac \ubb38\uc81c\uc5d0 \ub300\ud574 \uc9c0\uc6d0\ud300\uacfc \ucee4\ubba4\ub2c8\ud2f0\uac00 \uc791\uc131\ud55c \ubb38\uc11c\uac00 \ud3ec\ud568\ub418\uc5b4 \uc788\uc2b5\ub2c8\ub2e4.
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Zimbra \ud3ec\ub7fc</a>\uc740 \uc9c8\ubb38\uc5d0 \ub300\ud55c \ub2f5\uc744 \uc5bb\uc744 \uc218 \uc788\ub294 \uc720\uc6a9\ud55c \uc0ac\uc774\ud2b8\uc785\ub2c8\ub2e4. \uc774\ubbf8 \uc62c\ub77c\uc640 \uc788\ub294 \ub0b4\uc6a9\uc5d0\uc11c \ub2f5\uc744 \uac80\uc0c9\ud558\uac70\ub098 \uc9c8\ubb38\uc744 \uc62c\ub9b4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra \uc704\ud0a4</a>\uc5d0\ub294 \uc124\uba85\uc11c\uc5d0\uc11c \ub2e4\ub8e8\uc9c0 \uc54a\uc740 \ubb38\uc81c \ud574\uacb0 \ubc0f \uad00\ub9ac \ubb38\uc81c\uc5d0 \ub300\ud574 \uc9c0\uc6d0\ud300\uacfc \ucee4\ubba4\ub2c8\ud2f0\uac00 \uc791\uc131\ud55c \ubb38\uc11c\uac00 \ud3ec\ud568\ub418\uc5b4 \uc788\uc2b5\ub2c8\ub2e4.
 HELP_MIG_Q1 = Exchange \uc11c\ubc84 \uc774\uba54\uc77c \uacc4\uc815\uc744 Zimbra\ub85c \ub9c8\uc774\uadf8\ub808\uc774\uc158\ud558\ub824\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c \ud558\ub098\uc694?
 HELP_MIG_Q2 = Microsoft Outlook 2003, 2007, 2010 \ud3b8\uc9c0\ud568\uc5d0\uc11c .pst \ud30c\uc77c\uc758 \ucee8\ud150\uce20\ub97c Zimbra\ub85c \uac00\uc838\uc624\ub824\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c \ud558\ub098\uc694?
 HELP_MIG_Q3 = Domino \uc11c\ubc84 \uc774\uba54\uc77c \uacc4\uc815\uc744 Zimbra\ub85c \ub9c8\uc774\uadf8\ub808\uc774\uc158\ud558\ub824\uba74 \uc5b4\ub5bb\uac8c \ud574\uc57c \ud558\ub098\uc694?
