--- a/WebRoot/messages/ZabMsg_ms.properties
+++ b/WebRoot/messages/ZabMsg_ms.properties
@@ -39,7 +39,7 @@ yang tidak diliputi dalam dokumentasi.
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Menggunakan Zimbra dengan pelanggan lain? Baca panduan ini.
 zimbraTitle = Konsol Pentadbiran Zimbra
 about_title = Zimbra&trade; Konsol Pentadbiran
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Versi Zimbra:
 LBL_HomeHelpCenter = Pusat Bantuan Zimbra
 LBL_HomeMsgCount = Kiraan Mesej:
@@ -49,10 +49,10 @@ About_Button_Label = Mengenai Versi Zimbra
 zimbraHomePage = Laman Utama Zimbra
 zimbraAbout = Mengenai Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: peneraju dalam pemesejan dan kolaborasi sumber terbuka :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">Forum</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: peneraju dalam pemesejan dan kolaborasi sumber terbuka :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">Forum</a>
 ZWC_END_USER_GUIDE = Panduan Pengguna Akhir ZWC untuk 8.0
 ZWC_END_USER_GUIDE_INFO = Panduan pengguna akhir menerangkan ciri dan aplikasi yang digunakan dalam Pelanggan Web Zimbra.
 MessageContent = mesej
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = Manual Panduan Pentadbiran menerangkan seni bina sistem 
 HELP_usersGuide = Panduan Pengguna Akhir
 HELP_usersGuideDetail = Panduan pengguna akhir menerangkan ciri dan aplikasi yang digunakan dalam Pelanggan Web Zimbra.
 HELP_askCommunity = Tanya Komuniti
-HELP_askCommunityItem1 = <a target="_new" href="http://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat terbaik bagi mendapatkan jawapan untuk pertanyaan anda. Anda boleh mencari jawapan daripada siaran dan anda boleh menyiarkan pertanyaan.
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Wiki Zimbra</a> menyertakan artikel yang telah ditulis oleh pasukan sokongan dan komuniti sebagai respons kepada isu penyelesaian masalah dan pentadbiran yang tidak diliputi dalam dokumentasi
+HELP_askCommunityItem1 = <a target="_new" href="https://www.zimbra.com/forums">Forum Zimbra</a> adalah tempat terbaik bagi mendapatkan jawapan untuk pertanyaan anda. Anda boleh mencari jawapan daripada siaran dan anda boleh menyiarkan pertanyaan.
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Wiki Zimbra</a> menyertakan artikel yang telah ditulis oleh pasukan sokongan dan komuniti sebagai respons kepada isu penyelesaian masalah dan pentadbiran yang tidak diliputi dalam dokumentasi
 HELP_MIG_Q1 = Bagaimana saya memindahkan akaun e-mel pelayan daripada Exchange ke dalam Zimbra?
 HELP_MIG_Q2 = Bagaimana pengguna saya mengimport kandungan fail .pst daripada peti mel Microsoft Outlook 2003, 2007, 2010 ke dalam Zimbra?
 HELP_MIG_Q3 = Bagaimana saya memindahkan akaun e-mel pelayan daripada Domino ke dalam Zimbra?
