--- a/WebRoot/messages/ZabMsg_pt_BR.properties
+++ b/WebRoot/messages/ZabMsg_pt_BR.properties
@@ -35,7 +35,7 @@ HELP_PAGE_13 = O Zimbra wiki inclui artigos que a equipe de suporte e a \
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = Usa o Zimbra com outros clientes? Veja estes guias.
 zimbraTitle = Console de administra\u00e7\u00e3o do Zimbra
 about_title = Console de administra\u00e7\u00e3o do Zimbra&trade;
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Vers\u00e3o do Zimbra:
 LBL_HomeHelpCenter = Central de ajuda do Zimbra
 LBL_HomeMsgCount = Contador de mensagens:
@@ -45,10 +45,10 @@ About_Button_Label = Sobre a vers\u00e3o do Zimbra
 zimbraHomePage = P\u00e1gina inicial do Zimbra
 zimbraAbout = Sobre o Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> :: a l\u00edder em troca de mensagens instant\u00e2neas e colabora\u00e7\u00e3o usando c\u00f3digo-fonte aberto :: \
-    <a target="_new" href="http://blog.zimbra.com">Blog</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> :: a l\u00edder em troca de mensagens instant\u00e2neas e colabora\u00e7\u00e3o usando c\u00f3digo-fonte aberto :: \
+    <a target="_new" href="https://blog.zimbra.com">Blog</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs</a>
 ZWC_END_USER_GUIDE = Guia do usu\u00e1rio final do ZWC 8.0
 ZWC_END_USER_GUIDE_INFO = O guia do usu\u00e1rio final descreve os recursos e os aplicativos usados no Cliente Zimbra para Web.
 MessageContent = mensagem
@@ -64,8 +64,8 @@ HELP_adminGuideDetail = O Guia de administra\u00e7\u00e3o descreve a arquitetura
 HELP_usersGuide = Guia do usu\u00e1rio final
 HELP_usersGuideDetail = O guia do usu\u00e1rio final descreve os recursos e aplicativos usados no Cliente do Zimbra para Web.
 HELP_askCommunity = Pergunte \u00e0 comunidade
-HELP_askCommunityItem1 = Os <a target="_new" href="http://www.zimbra.com/forums">F\u00f3runs do Zimbra</a> s\u00e3o um bom lugar para obter respostas \u00e0s suas perguntas. Voc\u00ea pode procurar respostas nas postagens e postar uma pergunta.
-HELP_askCommunityItem2 = O <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> inclui artigos que a equipe de suporte e a comunidade escreveram em resposta a quest\u00f5es de solu\u00e7\u00e3o de problemas e de administra\u00e7\u00e3o que n\u00e3o foram abordadas na documenta\u00e7\u00e3o
+HELP_askCommunityItem1 = Os <a target="_new" href="https://www.zimbra.com/forums">F\u00f3runs do Zimbra</a> s\u00e3o um bom lugar para obter respostas \u00e0s suas perguntas. Voc\u00ea pode procurar respostas nas postagens e postar uma pergunta.
+HELP_askCommunityItem2 = O <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> inclui artigos que a equipe de suporte e a comunidade escreveram em resposta a quest\u00f5es de solu\u00e7\u00e3o de problemas e de administra\u00e7\u00e3o que n\u00e3o foram abordadas na documenta\u00e7\u00e3o
 HELP_MIG_Q1 = Como migrar contas de e-mail do servidor do Exchange para o Zimbra?
 HELP_MIG_Q2 = Como meus usu\u00e1rios podem importar o conte\u00fado de um arquivo .pst de uma caixa de correio do Microsoft Outlook 2003, 2007, 2010 para o Zimbra?
 HELP_MIG_Q3 = Como migrar contas de e-mail de servidor do Domino para o Zimbra?
