--- a/WebRoot/messages/ZabMsg_zh_TW.properties
+++ b/WebRoot/messages/ZabMsg_zh_TW.properties
@@ -39,7 +39,7 @@ HELP_PAGE_13 = Zimbra wiki \u5305\u62ec\u652f\u63f4\u5c0f\u7d44\u548c\u793e\u7fa
 HELP_OTHER_GUIDES_CONNNECTOR_INFO = \u8981\u5728\u5176\u4ed6\u7528\u6236\u7aef\u4e0a\u4f7f\u7528 Zimbra \u55ce? \u8acb\u53c3\u95b1\u9019\u4e9b\u6307\u5357\u3002
 zimbraTitle = Zimbra \u7ba1\u7406\u4e3b\u63a7\u53f0
 about_title = Zimbra&trade; \u7ba1\u7406\u4e3b\u63a7\u53f0
-HELP_WIKI_LINK = http://wiki.zimbra.com
+HELP_WIKI_LINK = https://wiki.zimbra.com
 LBL_HomeZimbraVersion = Zimbra \u7248\u672c:
 LBL_HomeHelpCenter = Zimbra \u8aaa\u660e\u4e2d\u5fc3
 LBL_HomeMsgCount = \u90f5\u4ef6\u8a08\u6578:
@@ -49,10 +49,10 @@ About_Button_Label = \u95dc\u65bc Zimbra \u7248\u672c
 zimbraHomePage = Zimbra \u9996\u9801
 zimbraAbout = \u95dc\u65bc Zimbra...
 
-clientLevelNotice = <a target="_new" href="http://www.zimbra.com">Zimbra</a> ::\u958b\u653e\u539f\u59cb\u78bc\u50b3\u8a0a\u53ca\u5354\u4f5c\u8fa6\u516c\u7cfb\u7d71\u7684\u696d\u754c\u9818\u5c0e\u8005 :: \
-    <a target="_new" href="http://blog.zimbra.com">\u90e8\u843d\u683c</a> - \
-    <a target="_new" href="http://wiki.zimbra.com">Wiki</a> - \
-    <a target="_new" href="http://www.zimbra.com/forums">\u8ad6\u58c7</a>
+clientLevelNotice = <a target="_new" href="https://www.zimbra.com">Zimbra</a> ::\u958b\u653e\u539f\u59cb\u78bc\u50b3\u8a0a\u53ca\u5354\u4f5c\u8fa6\u516c\u7cfb\u7d71\u7684\u696d\u754c\u9818\u5c0e\u8005 :: \
+    <a target="_new" href="https://blog.zimbra.com">\u90e8\u843d\u683c</a> - \
+    <a target="_new" href="https://wiki.zimbra.com">Wiki</a> - \
+    <a target="_new" href="https://www.zimbra.com/forums">\u8ad6\u58c7</a>
 ZWC_END_USER_GUIDE = 8.0 \u7248 ZWC \u4e00\u822c\u4f7f\u7528\u8005\u6307\u5357
 ZWC_END_USER_GUIDE_INFO = \u4e00\u822c\u4f7f\u7528\u8005\u6307\u5357\u4e3b\u8981\u5728\u63cf\u8ff0 Zimbra \u7db2\u9801\u7528\u6236\u7aef\u4f7f\u7528\u7684\u529f\u80fd\u548c\u61c9\u7528\u7a0b\u5f0f\u3002
 MessageContent = \u90f5\u4ef6
@@ -68,8 +68,8 @@ HELP_adminGuideDetail = \u300c\u7ba1\u7406\u6307\u5357\u300d\u624b\u518a\u4e3b\u
 HELP_usersGuide = \u4e00\u822c\u4f7f\u7528\u8005\u6307\u5357
 HELP_usersGuideDetail = \u4e00\u822c\u4f7f\u7528\u8005\u6307\u5357\u4e3b\u8981\u5728\u63cf\u8ff0 Zimbra \u7db2\u9801\u7528\u6236\u7aef\u4f7f\u7528\u7684\u529f\u80fd\u548c\u61c9\u7528\u7a0b\u5f0f\u3002
 HELP_askCommunity = \u8a62\u554f\u793e\u7fa4
-HELP_askCommunityItem1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="http://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u4e2d\u627e\u5230\u554f\u984c\u7684\u89e3\u7b54\u3002\u60a8\u53ef\u4ee5\u5f9e\u8cbc\u6587\u4e2d\u641c\u5c0b\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u8cbc\u6587\u63d0\u51fa\u554f\u984c\u3002
-HELP_askCommunityItem2 = <a target="_new" href="http://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u542b\u652f\u63f4\u5c0f\u7d44\u548c\u793e\u7fa4\u91dd\u5c0d\u7591\u96e3\u6392\u89e3\u548c\u7ba1\u7406\u554f\u984c (\u672a\u5305\u542b\u5728\u8aaa\u660e\u6587\u4ef6\u4e2d) \u6240\u64b0\u5beb\u7684\u6587\u7ae0\u3002
+HELP_askCommunityItem1 = \u60a8\u53ef\u4ee5\u5728 <a target="_new" href="https://www.zimbra.com/forums">Zimbra \u8ad6\u58c7</a>\u4e2d\u627e\u5230\u554f\u984c\u7684\u89e3\u7b54\u3002\u60a8\u53ef\u4ee5\u5f9e\u8cbc\u6587\u4e2d\u641c\u5c0b\u7b54\u6848\uff0c\u4e5f\u53ef\u4ee5\u8cbc\u6587\u63d0\u51fa\u554f\u984c\u3002
+HELP_askCommunityItem2 = <a target="_new" href="https://wiki.zimbra.com">Zimbra Wiki</a> \u5305\u542b\u652f\u63f4\u5c0f\u7d44\u548c\u793e\u7fa4\u91dd\u5c0d\u7591\u96e3\u6392\u89e3\u548c\u7ba1\u7406\u554f\u984c (\u672a\u5305\u542b\u5728\u8aaa\u660e\u6587\u4ef6\u4e2d) \u6240\u64b0\u5beb\u7684\u6587\u7ae0\u3002
 HELP_MIG_Q1 = \u5982\u4f55\u5c07\u4f3a\u670d\u5668\u96fb\u5b50\u90f5\u4ef6\u5e33\u6236\u5f9e Exchange \u79fb\u79fb\u81f3 Zimbra?
 HELP_MIG_Q2 = \u6211\u7684\u4f7f\u7528\u8005\u5982\u4f55\u5c07 .pst \u6a94\u6848\u5167\u5bb9\u5f9e Microsoft Outlook 2003\u30012007\u30012010 \u4fe1\u7bb1\u532f\u5165\u5230 Zimbra?
 HELP_MIG_Q3 = \u5982\u4f55\u5c07\u4f3a\u670d\u5668\u96fb\u5b50\u90f5\u4ef6\u5e33\u6236\u5f9e Domino \u79fb\u79fb\u81f3 Zimbra?
